--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -38,8 +38,12 @@
 
 
 ### 01.gRPC学习背景
-#### 1.1 为什么要学RPC
-
+#### 1.1 为什么要学gRPC
+- 在Android开发中，使用gRPC可以带来以下好处：
+    - 高效性：gRPC使用ProtoBuf作为默认的序列化协议，比JSON和XML等其他序列化协议更高效，可以减少网络带宽和CPU使用率。
+    - 可靠性：gRPC使用HTTP/2协议作为底层传输协议，可以提供更可靠的连接和流控制，同时支持TLS加密和认证。
+    - 易于使用：gRPC提供了自动生成代码的工具，可以方便地生成客户端和服务器端的代码，同时提供了丰富的文档和示例。
+    - 可扩展性：gRPC支持多种类型的RPC，包括简单RPC、流式RPC和双向流式RPC，可以满足不同的应用场景和需求。
 
 
 #### 1.2 RPC是什么
@@ -53,6 +57,11 @@
     - 1.RPC 是远程过程调用，其调用协议通常包括序列化协议和传输协议。序列化协议有基于纯文本的 XML 和 JSON、有的二进制编码的ProtoBuf。传输协议是指其底层网络传输所使用的协议，比如 TCP、HTTP。
     - 2.可以看出HTTP是RPC的传输协议的一个可选方案，比如说 gRPC 的网络传输协议就是 HTTP。HTTP 既可以和 RPC 一样作为服务间通信的解决方案，也可以作为 RPC 中通信层的传输协议（此时与之对比的是 TCP 协议）。
 
+
+#### 1.3 网络库收益分析
+- 使用gRPC作为网络方案可以带来以下收益：
+    - 使用gRPC作为网络方案可以带来高效性、跨平台和语言、可靠性、易于使用和可扩展性等收益。
+    - 同时可以减少手动编写代码的工作量，提高开发效率。
 
 
 #### 1.4 学习计划说明
@@ -210,9 +219,11 @@
     - 例如，对Java来说，编译器生成相应的.java文件，以及一个特殊的Builder类（该类用于创建消息类接口）。
 - 第三步：使用代码传输数据，调用api
     - protoBuf编译器会生成相应的方法，这些方法包括序列化方法和反序列化方法。
-    - 序列化方法用于创建和操作object，将它们转换为序列化格式，以进行存储或传输。
-    - 反序列化方法用于将输入的protoBuf数据转换为object。
+    - 序列化方法用于创建和操作object，将它们转换为序列化格式，以进行存储或传输。调用toByteArray()方法将object转为byte字节数组。
+    - 反序列化方法用于将输入的protoBuf数据转换为object。调用parseFrom(bytes)方法将bytes字节数据转为object对象。
     - 编译器完成它的工作后，开发人员所要做的，就是在发送/接收数据的代码中使用这些方法。
+
+
 
 
 ### 03.gRPC实践的介绍
