--- a/Read/ReadAndroid/06.Framework/15.NDK开发详细步骤.md
+++ b/Read/ReadAndroid/06.Framework/15.NDK开发详细步骤.md
@@ -1,14 +1,66 @@
 #### 目录介绍
+- 01.学习JNI开发流程
+    - 1.1 JNI和NDK的关系
+    - 1.2 JNI开发流程
+    - 1.3 JNI实践步骤
+    - 1.4 NDK使用场景
+- 02.
+
+
+
+
+### 01.学习JNI开发流程
+#### 1.1 JNI和NDK的关系
+- JNI和NDK学习内容太难
+    - 其实难的不是JNI和NDK，而是C/C++语言，JNI和NDK只是个工具，很容易学习的。
+- JNI和NDK有何联系
+    - 学习JNI之前，首先得先知道JNI、NDK、Java和C/C++之间的关系。
+    - 在Android开发中，有时为了性能和安全性（反编译），需要使用C/C++语言，但是Android APP层用的是Java语言，怎么才能让这两种语言进行交流呢，因为他们的编码方式是不一样的，这是就需要JNI了。
+    - JNI可以被看作是代理模式，Java使用JVM加载并调用JNI来间接调用C/C++代码，也就是Java让JNI代其与C/C++沟通。
+    - NDK呢其实主要就是用来将C/C++代码打包编译成.so库的。
+
+
+#### 1.2 JNI开发流程
+- JNI开发流程主要分为以下6步：
+    - 1、编写声明了native方法的Java类
+    - 2、将Java源代码编译成class字节码文件
+    - 3、用javah -jni命令生成.h头文件（javah是jdk自带的一个命令，-jni参数表示将class中用native声明的函数生成jni规则的函数）
+    - 4、用本地代码实现.h头文件中的函数
+    - 5、将本地代码编译成动态库（windows：*.dll，linux/unix：*.so，mac os x：*.jnilib）
+    - 6、拷贝动态库至 java.library.path 本地库搜索目录下，并运行Java程序
+
+
+#### 1.3 JNI实践步骤
+- 操作实践步骤
+    - 第一步，编写native方法。
+    - 第二步，根据此native方法编写C文件。
+    - 第三步，使用NDK打包成.so库。
+    - 第四步，使用.so库然后调用api。
+- 如何使用NDK打包.so库
+    - 1，编写Android.mk文件，此文件用来告知NDK打包.so库的规则
+    - 2，使用ndk-build打包.so库
+- 相关学习文档
+    - NDK学习：https://developer.android.google.cn/ndk/guides?hl=zh-cn
+
+
+
+#### 1.4 NDK使用场景
+- NDK的使用场景一般在：
+    - 1.为了提升这些模块的性能，对图形，视频，音频等计算密集型应用，将复杂模块计算封装在.so或者.a文件中处理。
+    - 2.使用的是C/C++进行编写的第三方库移植。如ffmppeg，OpenGl等。
+    - 3.某些情况下为了提高数据安全性，也会封装so来实现。毕竟使用纯Java开发的app是有很多逆向工具可以破解的。
 
 
 
 
 
-
-
-
-
-
-
-https://mp.weixin.qq.com/s/y-eKN-yb6chyoUrwNUG-8A
+### 参考博客
+- 入门级别jni开发教程
+  - https://codeleading.com/article/10304397763/
+- Android jni 开发详细流程
+  - https://blog.csdn.net/weixin_39300133/article/details/90901837
+- Android之jni开发流程
+  - https://mp.weixin.qq.com/s/y-eKN-yb6chyoUrwNUG-8A
+- Android JNI开发深度学习
+  - https://blog.csdn.net/luo_boke/article/details/109455910
 
