--- a/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
+++ b/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
@@ -4,6 +4,7 @@
 - 07.三明治的沟通法
 - 08.螺旋推进沟通法
 - 09.沟通效果的划分
+- 10.六原则提高沟通
 
 
 
@@ -116,7 +117,16 @@
 - 风险区：这是共识达成，但人际关系变差的情形。虽然达成了共识但最终因团队无法齐心协作而难以执行。
 
 
-
+### 10.六原则提高沟通
+- 沟通中，要想准确传达观点，有两个关键：逻辑和情绪。
+- 如果你发现自己沟通缺乏逻辑，可以从“讲三点”这个简单的技巧入手锻炼如果你发现自己表达逻辑没问题，但对方就是很难接受你的意见，那很可能是你在沟通过程中传递的情绪出了问题，没有营造出友好的沟通交流氛围。
+- SOFTEN 沟通六原则就是解决沟通情绪问题的好方法。
+- S：Smile（微笑），保持微笑更容易获得他人的信任和好感。
+- O：OpenPosture（准备注意聆听的姿态），面对讲话人站直或者端坐，让他认为你时刻在准备聆听。
+- F：ForwardLean（身体前倾），交谈中不时地将身体前倾，以此表示你专心在听。
+- T：Tone（音调），在谈到重要内容时，你的语速不妨放慢一些、提高音调着重强调一下。
+- E：EyeCommunication（目光交流），你的注视会让对方感受到你对谈话内容的重视，也会让对方更加信任你的话。
+- N：Nod（点头），偶尔向对方点头，不只表示你的赞同，同时说明你认真地听了他的讲话。
 
 
 
