--- a/Read/ReadShareWiki/05.生活博客/02.生活感想大集合.md
+++ b/Read/ReadShareWiki/05.生活博客/02.生活感想大集合.md
@@ -7,7 +7,9 @@
 - 07.机会成本和止损
 - 08.付出代价会回报
 - 09.避免费无效精力
-
+- 10.大多数人的建议
+- 11.警惕内卷化效应
+- 12.为何间歇性自律
 
 
 
@@ -144,6 +146,63 @@
     - 3.因为一件社会上一个舆论事件，结论模棱两可的问题，跟同事吵得很凶，不欢而散。
         - 如果（下次再有热点新闻）就（不在参与讨论）
 
+
+### 10.大多数人的建议
+- 先说一下背景
+    - 你会经常寻求他人的建议吗？或者你身边的家人、朋友、同事会经常向你寻求建议吗？你又是如何回应的呢？
+    - 对于大部分问题，他也没有办法给出具体的建议。其实，这是存在于大多数人之间的普遍现象。
+- 为何向别人寻求建议
+    - 当你需要寻求别人的建议时，那一定意味着你面临决策了。做决策就需要有选择，但是在大多数情况之下，没有人把选项摆在你的面前。
+    - 这时你就需要自己找到选项。但不管有没有选项，寻求建议本质上，是需要做决策。
+    - 做决策需要两件事情：信息环境，决策模型。充分、客观的信息环境，是做出正确决策的依据。如果你所处的信息环境里，有严重的信息缺失，甚至信息扭曲，那你就很难做出正确的决策。
+- 你其实是期待一个结论
+    - 很多人在寻求别人建议的时候，都只是想寻求一个确定的结论：你就告诉我应该怎么做就好了。
+    - 有时候这会忽略了信息环境这个因素。在大多数情况下，你的信息环境是自己私有的，只有你自己知道。这就意味着，别人在信息环境缺失的情况下，不可能给你一个确定的结论。
+- 什么是决策模型的建议？
+    - 如果是第 1 种情况，你应该怎么办？如果是第 2 种情况，你应该怎么办？如果是第 3 种情况，你应该怎么办？这就是决策模型的建议。
+    - 这些决策模型可能并不全面。但是，向别人寻求建议的时候，你要知道，因为信息环境不充分，你能得到的也就只会是决策模型。
+- 不要期待能够直接得到结论
+    - 向别人寻求建议时，不要期待能够直接得到结论。对方能够给到你的，最多只是决策模型。你需要把自己的信息环境带入决策模型里，再根据自己的价值观，做出最终决策。
+    - 当你做出决策之后，不管结果如何，你都要为自己的决策负全责。给你建议是对方的情分，而做出决策是自己的责任。在你给别人建议时，也是同样的道理。
+
+
+### 11.警惕内卷化效应
+- 什么是“内卷化”
+    - 内卷化是人类学的基本概念，由美国人类文化学家利福德·盖尔茨提出，并被广泛应用到了政治、经济、社会、文化及其他学术研究中。
+    - “内卷化”作为一个学术概念，指的是一个社会或组织既无突变式的发展，也无渐进式的增长，长期以来，只是在一个简单层次上自我重复。
+- 在职场中常见的“内卷化忙碌”
+    - 是一种长时间停留在没有成长的重复状态。好比一颗成熟了的卷心菜，始终在原地卷自己，既不会再长高了，也不会再变大了，从此停滞不前。
+- 从“内卷化”忙碌中突围
+    - 打破“内卷化”困境有两大出路，一是技术革新，二是对外开放。
+    - 对个人来说，人很容易进入一种故步自封的状态，这有可能是由于自己的生活环境过度安逸所导致的，长期处于一种很稳定、周围没什么变化的环境，也很有可能走入这种状态。因此多尝试新的事物，开启新的循环，制造机会让自己尝到甜头是一个不错的方法。
+    - 生活中，我们困苦于自己不管是在学习上还是工作上都毫无进步，而且有时候和家人朋友的关系也越来越不顺畅，自己要么变得越来越压抑，要么就是自暴自弃。这些状态都是“内卷化”的结果。它会让人在一个层面上无休止的内耗，既没有突破式的增长，也没有渐进式的积累，让人陷入一种恶性循环之中。
+    - 一旦陷入“内卷化”状态，就如同车入泥潭，裹足不前，无谓地耗费着有限的资源。长期以来，只会在一个简单层次上自我重复，浪费着宝贵的人生。
+
+
+
+### 12.为何间歇性自律
+- 先说下背景
+    - 都知道成长没有捷径和秘诀，无非是比别人多一点坚持，多一点努力，多做点反人性的事，可即使这些大道理我们都懂，但真正愿意持续付诸实践的人却少之又少。
+    - 于是，就开始了“间歇性自律、持续性懒散”之路。甚至越想要自律，却越求而不得，这是为什么呢？
+- 意志力式的坚持，不靠谱
+    - 大部分人都有过给自己打鸡血的经历，以为逼一逼自己，就可以过上持续性自律充实的生活，但却事与愿违，惨败收场。
+    - 以致于后来很长一段时间里，对“自律”这个词都有一种厌烦心理，坚持的勇气和信仰早已碎了一地。
+    - 事实上，很多人的问题和误区在于短时间内用力过猛，总是希望通过自己强大的意志力来维持长期的马拉松式坚守。
+    - 想要通过意志力来达成自律，强迫自己形成一种自律的生活方式，往往是行不通的。
+    - 要知道，任何一件事情需要你费力地坚持，心累地持续，那往往你也坚持不了太久。
+- 要追求的不是自律，而是自驱
+    - 人本来就有趋利避害的本性，我们喜欢做让自己感觉良好的事情，不喜欢做让自己感觉糟糕的事情。
+    - 当我们要启动意志力来做一件事情的时候，是我们暂时违背人的本性，远离让自己的欲望以及感觉好的事情，去做那些会让我们感到不适但却“正确”的事情。
+    - 理性思考可以影响我们的选择，但最终，我们内在的真实感受决定了我们会去做什么。
+    - 比如早起这件事，对于想要开始早起的人来说，这就是一种自律。而对于习惯早起的人，早起不仅毫不费劲，而且还理所应当，这不是自律，而是自驱。
+    - 所谓自驱，就是你顺应了内心的某种真实的感受，然后让那个感受来引导你去做那些“正确”的事情。
+- 自驱背后的心智模式
+    - 每个人都有自己的生活方式，而所谓生活方式，就应该是可持续，毫不费力。
+    - 一个人追求自驱，背后所隐藏的是一种“Be - Do - Have”的心智模式。
+    - 先明确自己想成为什么样的人，然后才会去想做些什么，之后才会有自律的行动，最后梦寐以求的东西也会随之渐渐显现。
+    - 人的内在定位准了，需求改变了，行动自然也就变了。而这样的行动，因为有了持续的内在刚需作驱动，所以才会变得自律而长久。
+    - 为你所做的事情赋予了足够的意义。而一件事情，赋予了意义，你就能够找到耐心坚持的动力。
+    - 当你不再依赖于意志力，当你不再追求所谓的自虐式律己，而是接纳自己，开启一种自我驱动的模式去做一件事情，那你就会找到属于你的生活节奏。
 
 
 
