--- a/Read/ReadAndroid/00.方案实践/04.ANR监控设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/04.ANR监控设计实践.md
@@ -7,17 +7,14 @@
     - 1.5 产生收益分析
 - 02.ANR基础分析
     - 2.1 究竟什么是ANR
-    - 2.2 造成ANR的原因分类
-    - 2.3 ANR产生条件
-    - 2.4 ANR触发场景
-    - 2.5 四大组件ANR
-    - 2.6 触发ANR的步骤
+    - 2.2 ANR产生条件
+    - 2.3 ANR触发场景
+    - 2.4 四大组件ANR
 - 03.ANR流程分析
     - 3.1 触发ANR的步骤
-    - 3.2 Activity的ANR分析
-    - 3.3 Service的ANR分析
-    - 3.4 ANR后系统执行流程
-    - 3.5 那些极端情况不会ANR
+    - 3.2 Service的ANR分析
+    - 3.3 ANR后系统执行流程
+    - 3.4 那些极端情况不会ANR
     - 3.6 ANR静默和弹窗
     - 3.7 处理ANR信息收集
     - 3.8 dump进程stack
@@ -30,7 +27,9 @@
 - 05.ANR监控排查思路
     - 5.1 ANR监控整体思路
     - 5.2 目前流行方案
-    - 5.3 ANR捕获设计
+    - 5.3 如何查看ANR日志
+    - 5.4 导出ANR信息
+    - 5.5 ANR具体如何分析
 - 06.其他设计说明
     - 6.1 性能设计
     - 6.2 稳定性设计
@@ -67,189 +66,79 @@
     - Android系统对于一些事件需要在一定的时间范围内完成，如果超过预定时间能未能得到有效响应或者响应时间过长，都会造成ANR。
 
 
-
-#### 2.2 造成ANR的原因分类
+#### 2.2 ANR产生条件
+- ANR的产生需要满足三个条件
+    - 主线程：只有应用程序进程的主线程响应超时才会产生ANR；
+    - 超时时间：产生ANR的上下文不同，超时时间也会不同，但只要在这个时间上限内没有响应就会ANR；
+    - 输入事件/特定操作：输入事件是指按键、触屏等设备输入事件，特定操作是指BroadcastReceiver和Service的生命周期中的各个函数，产生ANR的上下文不同，导致ANR的原因也会不同；
 - 造成ANR的原因一般有两种：
     - 当前的事件没有机会得到处理（即主线程正在处理前一个事件，没有及时的完成或者looper被某种原因阻塞住了）
     - 当前的事件正在处理，但没有及时完成
 
 
-#### 2.3 ANR产生条件
-- ANR的产生需要满足三个条件
-    - 主线程：只有应用程序进程的主线程响应超时才会产生ANR；
-    - 超时时间：产生ANR的上下文不同，超时时间也会不同，但只要在这个时间上限内没有响应就会ANR；
-    - 输入事件/特定操作：输入事件是指按键、触屏等设备输入事件，特定操作是指BroadcastReceiver和Service的生命周期中的各个函数，产生ANR的上下文不同，导致ANR的原因也会不同；
-
-
-#### 2.4 ANR触发场景
+#### 2.3 ANR触发场景
 - 分别有哪些场景
-    - 主线程，被阻塞5秒钟以上，就会抛出ANR对话框。不同的组件发生ANR的时间不一样，Activity是5秒，BroadCastReceiver是10秒，Service是20秒（均为前台）。
+    - 主线程，被阻塞5秒钟以上，就会抛出ANR对话框。不同的组件发生ANR的时间不一样，主要是四大组件。
     - 点击事件(按键和触摸事件)5s内没被处理: Input event dispatching timed out
 - 那些操作会引发ANR
-    - 1.Activity，Fragment中暴力相应点击事件有可能会导致ANR；2.断点调试时，程序可能会出现ANR无限应；3.主线程做了耗时操作，比如查询数据库数据导致ANR
+    - 1.Activity，Fragment中暴力相应点击事件有可能会导致ANR；
+    - 2.断点调试时，程序可能会出现ANR无限应；
+    - 3.主线程做了耗时操作，比如查询数据库数据导致ANR
 
 
-#### 2.5 四大组件ANR
+#### 2.4 四大组件ANR
 - service 前台20s后台200s未完成启动： Timeout executing service
     - Service Timeout是位于”ActivityManager”线程中的AMS.MainHandler收到SERVICE_TIMEOUT_MSG消息时触发。
     - 对于Service有两类: 对于前台服务，则超时为SERVICE_TIMEOUT = 20s；对于后台服务，则超时为SERVICE_BACKGROUND_TIMEOUT = 200s
 - BroadcastReceiver的事件(onReceive方法)在规定时间内没处理完：Timeout of broadcast BroadcastRecord
     - 对于前台广播，则超时为BROADCAST_FG_TIMEOUT = 10s；对于后台广播，则超时为BROADCAST_BG_TIMEOUT = 60s
     - 以BroadcastReviver为例，在onReceive()方法执行10秒内没发生第一种ANR(也就是在这个过程中没有输入事件或输入事件还没到5s)才会发生Receiver timeout，否则将先发生事件无相应ANR，所以onReceive()是有可能执行不到10s就发生ANR的，所以不要在onReceive()方法里面干活
-- ContentProvider的publish在10s内没进行完：timeout publishing content providers
-- Activity 界面如果5秒未响应：Activity not responding。这种是特别常见的场景
+- ContentProvider
+    - publish在10s内没进行完：timeout publishing content providers
+- Activity 界面如果5秒未响应
+    - Activity not responding。这种是特别常见的场景
+- 发生原因
+    - 主线程有耗时操作
+    - 复杂布局
+    - IO操作
+    - 被子线程同步锁block
+    - 被Binder对端block
+    - Binder被占满导致主线程无法和SystemServer通信
+    - 得不到系统资源（CPU/RAM/IO）
+- 从进程角度看发生原因有：
+    - 当前进程：主线程本身耗时或者主线程的消息队列存在耗时操作、主线程被本进程的其它子线程所blocked
+    - 远端进程：binder call、socket通信
 
 
 ### 03.ANR流程分析
 #### 3.1 触发ANR的步骤
-- 四大组件触发ANR的步骤。大概是：埋下注册超时 ----> 触发超时 ----> 引发超时ANR
+- 四大组件触发ANR的步骤。
+    - 大概是：埋下注册超时 ----> 触发超时 ----> 引发超时ANR
 
 
-
-#### 3.3 Service的ANR分析
-##### 3.3.1 埋下注册超时
-- 调用startService，在Service进程attach到system_server进程的过程中会调用realStartServiceLocked()方法来注册超时
-- 具体看ActiveServices类中的realStartServiceLocked()方法源码
-    ``` java
-    private final void realStartServiceLocked(ServiceRecord r, ProcessRecord app, boolean execInFg) throws RemoteException {
-        ...
-        //发送delay消息
-        bumpServiceExecutingLocked(r, execInFg, "create");
-        try {
-            ...
-            //最终执行服务的onCreate()方法
-            app.thread.scheduleCreateService(r, r.serviceInfo,
-                    mAm.compatibilityInfoForPackageLocked(r.serviceInfo.applicationInfo),
-                    app.repProcState);
-        } catch (DeadObjectException e) {
-            mAm.appDiedLocked(app);
-            throw e;
-        } finally {
-        }
-    }
-    ```
-    - 接着往下看 bumpServiceExecutingLocked 方法源码，如下所示：
-    ``` java
-    private final void bumpServiceExecutingLocked(ServiceRecord r, boolean fg, String why) {
-        if (r.executeNesting == 0) {
-            if (r.app != null) {
-                if (timeoutNeeded && r.app.executingServices.size() == 1) {
-                    scheduleServiceTimeoutLocked(r.app);
-                }
-            }
-        } else if (r.app != null && fg && !r.app.execServicesFg) {
-            if (timeoutNeeded) {
-                scheduleServiceTimeoutLocked(r.app);
-            }
-        }
-    }
-    ```
-    - 接着看 scheduleServiceTimeoutLocked 方法源码，这里面才是处理超时时间的具体逻辑，通过handler发送延迟消息。
-    ``` java
-    void scheduleServiceTimeoutLocked(ProcessRecord proc) {
-        Message msg = mAm.mHandler.obtainMessage(
-                ActivityManagerService.SERVICE_TIMEOUT_MSG);
-        msg.obj = proc;
-        mAm.mHandler.sendMessageDelayed(msg,
-                proc.execServicesFg ? SERVICE_TIMEOUT : SERVICE_BACKGROUND_TIMEOUT);
-    }
-    ```
-- 然后来梳理一下整个流程
+#### 3.2 Service的ANR分析
+- 埋下注册超时
+    - 调用startService，在Service进程attach到system_server进程的过程中会调用`realStartServiceLocked()`方法来注册超时
     - ----> ActiveServices 类 realStartServiceLocked 方法
     - ----> ActiveServices 类 bumpServiceExecutingLocked 方法
     - ----> ActiveServices 类 scheduleServiceTimeoutLocked 方法 ， handler发送延迟消息
-
-
-##### 3.3.2 触发超时
-- 触发超时分析
-    - 在system_server进程AS.realStartServiceLocked()调用的过程会埋下注册超时, 超时没有启动完成则会超时。
+    - ----> ActivityManagerService 类的 MainHandler 中，有处理handler延迟消息，具体看：SERVICE_TIMEOUT_MSG
+- 触发超时，触发超时分析
+    - 在system_server进程`AS.realStartServiceLocked()`调用的过程会埋下注册超时, 超时没有启动完成则会超时。
     - 那么什么时候会触发超时的引线呢? 经过Binder等层层调用进入目标进程的主线程handleCreateService()的过程。
-- 具体看ActivityThread类中的handleCreateService方法
-    ``` java
-    private void handleCreateService(CreateServiceData data) {
-        try {
-            //创建ContextImpl对象，直接new创建的
-            ContextImpl context = ContextImpl.createAppContext(this, packageInfo);
-            context.setOuterContext(service);
-            //创建Application对象，反射创建的
-            Application app = packageInfo.makeApplication(false, mInstrumentation);
-            service.attach(context, this, data.info.name, data.token, app,
-                    ActivityManagerNative.getDefault());
-            //调用服务onCreate()方法 
-            service.onCreate();
-            //触发超时的核心代码
-            ActivityManager.getService().serviceDoneExecuting(
-                    data.token, SERVICE_DONE_EXECUTING_ANON, 0, 0);
-        } catch (Exception e) {
-        }
-    }
-    ```
-    - 然后看一下ActivityManagerService类中的serviceDoneExecuting源码
-    ``` java
-    public void serviceDoneExecuting(IBinder token, int type, int startId, int res) {
-        synchronized(this) {
-            if (!(token instanceof ServiceRecord)) {
-                Slog.e(TAG, "serviceDoneExecuting: Invalid service token=" + token);
-                throw new IllegalArgumentException("Invalid service token");
-            }
-            mServices.serviceDoneExecutingLocked((ServiceRecord)token, type, startId, res);
-        }
-    }
-    ```
-    - 然后再看一下ActiveServices类中的serviceDoneExecutingLocked方法源码。该方法的主要工作是当service启动完成，则移除服务超时消息SERVICE_TIMEOUT_MSG。
-    ``` java
-    private void serviceDoneExecutingLocked(ServiceRecord r, boolean inDestroying, boolean finishing) {
-        if (r.executeNesting <= 0) {
-            if (r.app != null) {
-                r.app.execServicesFg = false;
-                r.app.executingServices.remove(r);
-                if (r.app.executingServices.size() == 0) {
-                    //当前服务所在进程中没有正在执行的service
-                    mAm.mHandler.removeMessages(ActivityManagerService.SERVICE_TIMEOUT_MSG, r.app);
-        }
-    }
-    ```
-- 然后来梳理一下整个流程
-    - ----> ActivityThread 类 handleCreateService 方法 
+    - ----> ActivityThread 类 handleCreateService 方法
     - ----> ActivityManagerService 类 serviceDoneExecuting 方法
-    - ----> ActiveServices 类 serviceDoneExecutingLocked 方法 
-
-
-
-##### 3.3.3 引发超时ANR
-- 如何引发超时ANR
+    - ----> ActiveServices 类 serviceDoneExecutingLocked 方法
+- 引发超时ANR，触发超时分析
     - 介绍了埋下注册超时和触发超时的过程, 如果在超时倒计时结束之前成功拆卸注册超时,那么就没有引发ANR的机会。
     - 但总有些极端情况下无法即时拆除注册超时,导致触发超时了, 其结果就是App发生ANR。
-- 在system_server进程中有一个Handler线程, 名叫”ActivityManager”
-    - 当倒计时结束便会向该Handler线程发送 一条信息SERVICE_TIMEOUT_MSG
-- 在ActivityManagerService类中的handleMessage方法中
-    ``` java
-    final class MainHandler extends Handler {
-        public void handleMessage(Message msg) {
-            switch (msg.what) {
-                case SERVICE_TIMEOUT_MSG: {
-                    mServices.serviceTimeout((ProcessRecord)msg.obj);
-                } break;
-            }
-        }
-    }
-    ```
-    - 然后看一下ActiveServices类的serviceTimeout方法
-    ``` java
-    void serviceTimeout(ProcessRecord proc) {
-        if (anrMessage != null) {
-            //当存在timeout的service，则执行ANR
-            mAm.appNotResponding(proc, null, null, false, anrMessage);
-        }
-    }
-    ```
-- 然后来梳理一下整个流程
-    - ----> ActivityManagerService 类 handleMessage 方法 
+    - 在system_server进程中有一个Handler线程, 名叫”ActivityManager”。当倒计时结束便会向该Handler线程发送 一条信息SERVICE_TIMEOUT_MSG
+    - ----> ActivityManagerService 类 handleMessage 方法
     - ----> ActiveServices 类 serviceTimeout 方法
 
 
 
-#### 3.4 ANR后系统执行流程
+#### 3.3 ANR后系统执行流程
 - ANR后流程如下
     - APP发生ANR
     - 进程接收异常终止信号，开始写入进程ANR信息（当时场景，包含当前线程所有堆栈信息、CPU/IO的使用情况等）；
@@ -259,39 +148,13 @@
 
 
 
-#### 3.5 那些极端情况不会ANR
-- 具体可以看appNotResponding方法中的下面代码。会发现有一些条件直接执行了return。
-    ``` java
-    void appNotResponding(String activityShortComponentName, ApplicationInfo aInfo,
-            String parentShortComponentName, WindowProcessController parentProcess,
-            boolean aboveSystem, String annotation) {
-        synchronized (mService) {
-            // PowerManager.reboot() can block for a long time, so ignore ANRs while shutting down.
-            if (mService.mAtmInternal.isShuttingDown()) {
-                Slog.i(TAG, "During shutdown skipping ANR: " + this + " " + annotation);
-                return;
-            } else if (isNotResponding()) {
-                Slog.i(TAG, "Skipping duplicate ANR: " + this + " " + annotation);
-                return;
-            } else if (isCrashing()) {
-                Slog.i(TAG, "Crashing app skipping ANR: " + this + " " + annotation);
-                return;
-            } else if (killedByAm) {
-                Slog.i(TAG, "App already killed by AM skipping ANR: " + this + " " + annotation);
-                return;
-            } else if (killed) {
-                Slog.i(TAG, "Skipping died app ANR: " + this + " " + annotation);
-                return;
-            }
-        }
-    }
-    ```
-- 有哪些极端的情况不会ANR
+#### 3.4 那些极端情况不会ANR
+- 具体可以看appNotResponding方法中的下面代码。会发现有一些条件直接执行了return。有哪些极端的情况不会ANR
     - 一长串if else，给出了几种比较极端的情况，会直接return，而不会产生一个ANR。
     - 这些情况包括：进程正在处于正在关闭的状态，正在crash的状态，被kill的状态，或者相同进程已经处在ANR的流程中。
 
 
-#### 3.6 ANR静默和弹窗
+#### 3.5 ANR静默和弹窗
 - 看下面的源码分析，还是appNotResponding方法。
     - 大概的意思是，通过isSilentAnr()判断是否是静默ANR，如果是那么则直接kill杀死app。其实就是后台ANR。
     - 如果是前台，则是通过handler发送一个消息，创建anr弹窗对象，赋值给message的obj对象。
@@ -425,6 +288,7 @@
 - 由此可见，组件类`ANR`和`Input ANR`原理上确实有所不同；除此之外，前者是在`ActivityManager`线程中处理的`ANR`信息，后者则是在`InputDispatcher`线程中处理的`ANR`
 
 
+
 #### 4.5 事件分发异步机制
 - 先抛出一个新的问题，对处于`system_server`进程`Native`层级的 **事件分发** 而言，其向下与 **应用进程** 的通信的过程应该是同步还是异步的？
     - 对于读者而言，不难得出答案是异步的，因为两者之间双向通信的建立是通过`SocketPair`，并且，因为`system_server`中`InputDispatcher`对事件的分发实际上是一对多的，如果是同步的，那么一旦其中一个应用分发超时，那么`InputDispatcher`线程自然被卡住，其永远都不可能进入到下一轮的事件分发中，**扫雷** 机制更是无从谈起。
@@ -466,7 +330,68 @@
     - 为卡顿监控代码增加ANR的线程监控，在发送消息时，在ANR线程中保存一个状态，主线程消息执行完后再Reset标志位。如果在ANR线程中收到发送消息后，超过一定时间没有复位，就可以任务发生了ANR。
 
 
-#### 5.3 ANR捕获设计
+
+#### 5.3 如何查看ANR日志
+- 如何查看ANR信息？
+    - 1、抓取bugreport。adb shell bugreport > bugreport.txt
+    - 2、直接导出/data/anr/traces.txt文件。adb pull /data/anr/traces.txt
+
+
+
+#### 5.4 导出ANR信息
+- 在AS的Terminal中，使用: adb pull data/anr/traces.txt 要存储在本地的路径
+    - 导出上面提到的ANR现场信息文件；导出来后，便可对文件内容进行详细分析：从CPU、IO、锁冲突等原因思考；
+- 导出ANR生成文件遇到的问题
+    - 输入：adb pull data/anr/traces.txt /Users/didi/yc  报错
+    - 报错日志：adb: error: failed to stat remote object 'data/anr/traces.txt': No such file or directory
+- 为何会出现这种情况
+    - 查了些资料，发现厂商有对这块做优化。以前anr一直放在traces文件中，多次出现有覆盖的问题。高版本厂商做了优化，会根据时间戳分别生成一个文件，打包导出。
+- 遇到权限问题
+    - 在查看data文件夹时，看到权限不允许。ls: .: Permission denied，这个该怎么办呢？
+- 使用 adb bugreport 导出文件
+    - 此命令会导出一个zip压缩包，解压后在FS/data/anr目录下就可以看到traces文件了。adb bugreport 命令也可以指定文件导出目录
+
+
+#### 5.5 ANR具体如何分析
+- ANR问题是由于主线程的任务在规定时间内没处理完任务，而造成这种情况的原因大致会有一下几点：
+    - 主线程在做一些耗时的工作导致线程卡死
+    - 主线程被其他线程锁
+    - cpu被其他进程占用，该进程没被分配到足够的cpu资源。
+- 然后看anr日志。在发生ANR的时候，系统会收集ANR相关的信息提供给开发者：首先在Log中有ANR相关的信息，其次会收集ANR时的CPU使用情况，还会收集trace信息，也就是当时各个线程的执行情况。trace文件保存到了/data/anr/traces.txt中
+    - 从log中找到ANR反生的信息：会包含了ANR的时间、进程、是何种ANR等信息。
+    - 在该条log之后会有CPU usage的信息，表明了CPU在ANR前后的用量（log会表明截取ANR的时间），从各种CPU Usage信息中大概可以分析如下几点：
+        - 如果某些进程的CPU占用百分比较高，几乎占用了所有CPU资源，而发生ANR的进程CPU占用为0%或非常低，则认为CPU资源被占用，进程没有被分配足够的资源，从而发生了ANR。这种情况多数可以认为是系统状态的问题，并不是由本应用造成的。
+        - 如果发生ANR的进程CPU占用较高，如到了80%或90%以上，则可以怀疑应用内一些代码不合理消耗掉了CPU资源，如出现了死循环或者后台有许多线程执行任务等等原因，这就要结合trace和ANR前后的log进一步分析了。
+        - 如果CPU总用量不高，该进程和其他进程的占用过高，这有一定概率是由于某些主线程的操作就是耗时过长，或者是由于主进程被锁造成的。
+    - 除了上述分析CPU usage之后，确定问题需要我们进一步分析trace文件。trace文件记录了发生ANR前后该进程的各个线程的stack。对我们分析ANR问题最有价值的就是其中主线程的stack，一般主线程的trace可能有如下几种情况：
+        - 主线程是running或者native而对应的栈对应了我们应用中的函数，则很有可能就是执行该函数时候发生了超时。
+        - 主线程被block:非常明显的线程被锁，这时候可以看是被哪个线程锁了，可以考虑优化代码。如果是死锁问题，就更需要及时解决了。
+        - 由于抓trace的时刻很有可能耗时操作已经执行完了（ANR -> 耗时操作执行完毕 ->系统抓trace），这时候的trace就没有什么用了，主线程的stack就是这样的：
+        - ![image](https://upload-images.jianshu.io/upload_images/4432347-d04774c861b8e6c4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+- 总结，就是两个问题
+    - 1.CPU 问题
+        - 在 Monkeylog.log 文件中定位到 "anr in" 位置，查看 cpu usage ,total 占用，如发现接近100%，暂时判断为 cpu 问题。
+        - 然后在 logcat.log 文件中定位到 "not responding" 发生时间，并截取cpuinfo.log 中时间点前后 5s 的 log，然后计算 CPU 占中，看哪个进程用的多，在酌情分析模块的 CPU 占中。
+    - 2.GC 问题
+        - 定位到 logcat.log 文件中 "not responding" 发生时间点；
+        - 去查看发生 ANR 时间点对应的 trace 文件，定位到应用包名，若Dalvik Thread主线程显示“SUSPENDED”,则为内存问题；
+        - 截取 ANR 发生时间点前 5s 的 log，分析 "dalvikvm" 打印的 Paused GC 耗时，如果过多则定位为 GC 问题，需要查看这 5s 件发生了哪些耗时的操作。
+
+
+#### 5.6 避免ANR操作方案
+- 将所有耗时操作，比如访问网络，Socket通信，查询大量SQL 语句，复杂逻辑计算等都放在子线程中去
+    - 然后通过handler.sendMessage、runOnUIThread、AsyncTask 等方式更新UI。无论如何都要确保用户界面作的流畅度。如果耗时操作需要让用户等待，那么可以在界面上显示度条。
+- 使用AsyncTask处理耗时IO操作。
+    - 在一些同步的操作主线程有可能被锁，需要等待其他线程释放相应锁才能继续执行，这样会有一定的ANR风险，对于这种情况有时也可以用异步线程来执行相应的逻辑。另外， 要避免死锁的发生。
+- 使用Thread或者HandlerThread时
+    - 调用Process.setThreadPriority(Process.THREAD_PRIORITY_BACKGROUND)设置优先级，否则仍然会降低程序响应，因为默认Thread的优先级和主线程相同。
+    - 使用Handler处理工作线程结果，而不是使用Thread.wait()或者Thread.sleep()来阻塞主线程。
+- 四大组件ANR避免
+    - Activity的onCreate和onResume回调中尽量避免耗时的代码
+    - BroadcastReceiver中onReceive代码也要尽量减少耗时，建议使用IntentService处理。
+    - 各个组件的生命周期函数都不应该有太耗时的操作，即使对于后台Service或者ContentProvider来讲
+    - 应用在后台运行时候其onCreate()时候不会有用户输入引起事件无响应ANR，但其执行时间过长也会引起Service的ANR和ContentProvider的ANR
+
 
 
 ### 05.参考资料
