--- a/Read/ReadShareWiki/05.生活博客/02.生活感想大集合.md
+++ b/Read/ReadShareWiki/05.生活博客/02.生活感想大集合.md
@@ -10,6 +10,9 @@
 - 10.大多数人的建议
 - 11.警惕内卷化效应
 - 12.为何间歇性自律
+- 13.什么是三观不合
+- 14.承认自己能力有限
+- 15.一年经验用十年
 
 
 
@@ -206,18 +209,77 @@
 
 
 
+### 13.什么是三观不合
+- 三观不合是什么
+    - 我们会在很多的场合，会在很多的工作环境中，听到别人讲到这个三观问题。常常没有来得及去了解一个人，或者仅仅是因为有些事情上的看法不一样，就会说到三观不合。
+    - 三观指的是双方各自的人生观、价值观和世界观，有些人试图用道德和意识去分析。这里我不也想去抠这几个词的意思。就拿一些具体的案例来说一下自己的观点。
+- 什么是真正的三观不合
+    - 下面的一些举例不一定能够完全说明问题，但一定是真实而可见的案例，如果有不同的意见，欢迎指出……
+    - 你喜欢看书，他喜欢玩游戏。这不叫三观不合。你喜欢看书，他说看书有什么用，不就是装文艺嘛。这才是三观不合。
+    - 你上大专要是经常去图书馆，别人经常宅在宿舍玩，这不叫三观不合。你要是被别人认为假装认真，认为经常熬夜逃课那样才算合群，这才是三观不合。
+    - 你喜欢去西餐厅吃牛排，他喜欢在大排档撸串。这不叫三观不合。但是他说那玩意死贵，还不好吃，说你就知道享受。这就是三观不合。
+    - 你喜欢利用假期的时间去各地旅游，他就喜欢宅在家里睡懒觉或者打游戏，这不是三观不合。但是他说旅游有什么好玩的，还要花钱，而且是花钱遭罪嘛，躺在家里多舒服。这就是三观不合。
+    - 你喜欢挖掘别人的优点和看别人长处，他喜欢给别人挑毛病和找问题，这不是三观不合。但是他说你就知道装逼，虚伪，人更加应该“直率”。这就是三观不合。
+    - 你喜欢喝星巴克，他喜欢喝一块钱一瓶的矿泉水；都是喝自己喜欢的饮料，这不是三观不合。但是你喝咖啡解乏，他却觉得你一天天的就是抬着个星巴克的杯子装逼。这才是三观不合。
+- 尊重别人的三观
+    - 简单点来说，真正的三观不合，是不尊重彼此的三观。交朋友，谈恋爱，和同事相处，不是非得一定要找和你一模一样兴趣爱好的人，但是一定要交往哪些懂得尊重你兴趣爱好的人。
+    - 也可以是我在这边安静的写代码，你在电脑前忘我的玩游戏，我不会鄙视你的游戏，你也偶尔会来看看我了解下我写的什么代码；
+    - 也可以是我晚上养成早睡的习惯，你经常熬夜到凌晨的加班，玩耍或者追剧，我不会鄙视你的作息不规律，你也不会觉得我年龄大了没有都市年轻人的特质；
+    - 也可以是我吃我的路边摊，你吃你的高档餐厅，我会觉得你生活很有品味，你也不会鄙视我是个穷逼青年。
+    - 说话让人舒服的人，是懂得尊重彼此三观的人。三观一致，并不是要求你们的兴趣喜好、思维方式完全一样，而是彼此间能够求同存异，懂得包容、理解和欣赏。
+
+
+
+### 14.承认自己能力有限
+- **害怕自己不够意思**
+    - 当别人求助于我的时候，我内心往往非常抵触，却又怕别人说我是所谓的“不够意思的人”，于是硬着头皮去做自己不喜欢做的事情。有一次特别受伤的时候，突然一闪念，想明白，原来这种尴尬本质上并不是来自于我没有“乐于助人”的品性，而是来自于我自己的精力并不足够旺盛，没有旺盛到处理自己的事情绰绰有余的同时，还有大把的时间精力用来帮别人做事。
+    - 事实上，我自己根本己经是正在过河的泥菩萨。后来，我开始怀疑，雷锋的领导是否太白痴，因为他没有给自己的下属分配足够的工作。这是那天晚上与我来讲非常惊喜的一件事儿，因为我发现我正在独立思考。
+- **承认自己能力有限**
+    - 承认自己能力有限，是心理健康的前提。从重新思考雷锋的领导那天开始，挣扎着去学习如何做事量力而行。说起来好笑，自己的智商有限到过去竟然没想到“量力而行”是如此高难度的行为模式：1)承认自己能力有限；2)不怕在别人面前露怯；3)敢于不去证明自己是“好人”……
+- **不要对有些人大度**
+    - 有的时候人就是这样，你越大度，别人就越得寸进尺。有句话说，忍一时越想越气，退一步越想越亏。别不好意思拒绝别人，反正那些好意思为难你的人也没替你想过。
+- **学会合理拒绝**
+    - 人人都告诉你，做人要善良。这没什么问题，但做人最大的问题，就是不会拒绝。不懂得拒绝的人，一次、两次，会有后来的无数次。你即使把自己累死，也不会得到别人真正的尊重。因为对方习惯了你的顺从，你的“好心”。成全了别人，恶心了自己。滋味难受。
 
 
 
 
-
-
-
-
-
-
-
-
+### 15.一年经验用十年
+- 背景简单介绍
+    - 经常有职场人感叹，自己 30 岁出头，有丰富的工作经验，但却很难找工作，经常被“后辈”超越。
+    - 之所以出现这样的情况，是因为很多职场人看似有 10 年工作经验，其实只是把 1 年的工作经验用了 10 年。
+    - 公司一直在发展，如果员工的自我更新无法跟上公司发展，就容易被落下甚至被淘汰。
+- 一年经验用 N 年的员工，有哪些特点？
+    - 很多职场人表面看上去经验丰富，其实只是把 1 年经验用了 N 年。
+    - 具体来看，这些职场人有以下 3 个特点：1.工作中思维模式固化；2.陷入低水平勤奋陷阱；3.自我提高内驱力较低
+- 1.工作中思维模式固化。
+    - 固定型思维的人认为人的能力是一成不变的。他们会以这个为依据，规划自己以后的人生。这类员工往往缺乏长远的眼光，容易被职业生涯中的变动打得措手不及。
+    - 在信息爆炸时代，工作中思维模式固化带给职场人的负面影响，远比你想象的要大得多。
+    - 不懂得变通就没有了差异性，不去学习新知识就失去了预测性，随时可能被学习能力强、自我塑造能力好的“后辈”反超。
+- 2.陷入低水平勤奋陷阱
+    - 帕金森鸡毛蒜皮定律提出，人们花费在一件事情上的时间和事情的重要性成反比。意思是说，我们总对小事纠缠不休，是因为我们懂这些小事；我们回避复杂问题，是因为我们对这些问题摸不着头脑，同时又怕出丑而不敢发问。
+    - 很多职场人总是偏向于用大量时间来做一些无需脑力思考的活动，造成了低质量的超长时间投入，从而出现“1 年经验用 N 年”这类职场现象，也导致自己固步自封。
+- 3.自我提高内驱力较低
+    - 自我提高内驱力较低的员工，长期以来被动成长，成长速度低于公司。
+    - 他们通常只是业务熟练，没有核心竞争力，与刚入职的员工相比，差距微乎其微，很容易被有能力的新人取代。
+- 怎样才能不被职场“后辈”反超？
+    - 1.树立危机意识，保持职场敏感；2.掌握底层规律，提高认知效率；3.眼光面向未来，寻求突围成长
+- A.树立危机意识，保持职场敏感
+    - 常年习惯于一个固定工作模式的员工，虽然专业知识和工作经验丰富，但是容易在长期工作中缺失危机意识。
+    - 员工对外界变得不敏感，无法准确感知行业的变化，就会与工作前沿脱节，容易被新人追上。
+    - 你需要及时反思自己在行业中的差距，有针对性地调整自己的工作计划，甚至职业规划。
+    - 树立危机意识，定期投资自己，培养职场的敏感度，才能从容应对职场变化。
+    - 你可以主动为工作赋予使命和价值，定期把职业目标向更高的方向调整，进行领域深耕。在底层能力的基础上，多学习和事业目标有关的新事物，让自己的方法论持续更新，防止自己的工作思维模式固化，从而保持行业和职业的连续性。
+- B.掌握底层规律，提高认知效率
+    - 很多老员工觉得自己学习技能的速度不如年轻人，年龄注定是职业生涯中跨不去的坎。其实这是一个认知错误。
+    - 大多数职场人一直把时间花在想办法提升“技术效率”上，而忽略了真正重要的“认知效率”。
+    - 你只有掌握了底层规律，提高认知效率，面对行业前景的变化，才能举一反三。
+    - 此外，你还要学习具体的知识和技能，进行深度工作，让自己的认知升级。不断自我迭代，从而拥有跨界整合的能力。
+- C.眼光面向未来，寻求突围成长
+    - 一切的学习和努力无非三个目标：一是解释问题，二是解决问题，三是预测问题。
+    - 你需要延迟当下的满足感，眼光面向未来，站在更高的角度去看待问题，分析市场变化。
+    - 跟着时代的步伐，不断地升华自身认知，接触不同的人给予自己的反馈，突围成长，才能破除被“后辈”取代的危机。
+    - 只有在工作之余刻意成长，利用碎片化时间不断给自己充电，保持自我更新，系统构建新知识与旧知识之间的联系，形成自己的核心竞争力，增强自己的不可替代性，才能让自己的职业生涯稳步增值，在职场中立于不败之地。
 
 
 
