--- a/Read/ReadShareWiki/05.生活博客/01.如何让自己有趣.md
+++ b/Read/ReadShareWiki/05.生活博客/01.如何让自己有趣.md
@@ -17,7 +17,8 @@
 
 ### 02.为何成为有趣人
 - 想要使自己具有更加独特的价值？亦或是想要让自己能摆脱千篇一律的生活色彩？无非就是想改变别人对自己的看法或自己对本身的态度。
-- 成为一个有趣的人，最重要的是成为一个独特的人，而一个独特的人，最重要的是有一颗独特的心（灵魂？）。读书、写字、旅游、生活——凡是你能想到提升自己什么见识、智慧这些内在东西的最终目的不都是让你给别人的感觉不一样吗?
+- 成为一个有趣的人，最重要的是成为一个独特的人，而一个独特的人，最重要的是有一颗独特的心（灵魂？）。
+- 读书、写字、旅游、生活——凡是你能想到提升自己什么见识、智慧这些内在东西的最终目的不都是让你给别人的感觉不一样吗?
 - 换句话说就是使自己与他人不同，即为独特，即为有趣。有点鹤立鸡群的感觉，但又不能就这样张开翅膀拍拍走人，这样的叫隐士。
 
 
