--- a/Read/ReadShareWiki/05.生活博客/06.不为人知的哲学.md
+++ b/Read/ReadShareWiki/05.生活博客/06.不为人知的哲学.md
@@ -1,6 +1,7 @@
 #### 目录介绍
 - 01.六分赚钱的法则
 - 02.考虑失败关注细节
+- 03.优雅与老板谈工资
 
 
 
@@ -32,11 +33,24 @@
 
 
 
-
-
-
-
-
-
+### 03.优雅与老板谈工资
+- 先来看一下背景
+    - 职场上，老板喜欢跟员工谈情怀，员工喜欢跟老板谈工资。对于开发人员来说，开口谈工资似乎是一件很难为情的事情，但它却无法回避。
+    - 那么，开发人员怎样才能优雅地与老板谈工资呢？
+- 确定自我价值
+    - 自我价值是确定你相对于市场上其他人的市场价值。你可以和其他开发人员谈谈，看看他们的薪资处于什么水平。或者查阅薪酬估算网站，将不同行业的薪酬情况做下对比分析。
+    - 你还要在心中设定一个理想的薪资目标，哪怕这个数字并不打算公开，也要让自己清楚你的底线在哪里。
+    - 公司提供的薪水和目标薪水之间的差异，会给你的谈判提供思路。
+    - 此外，当你谈薪资时，可以展现自己在曾经的组织里取得了什么成就，比如你给公司带来了哪些商机等等。
+- 确定公司的价值
+    - 一般来说，大公司会有分级的开发人员，并且有良好组织的薪资结构。比如将软件开发者分 1 到 6 个级别，不同级别对应不同的薪资水平。
+    - 你需要先了解水平边界，即最高等级和最低等级的情况。当你熟知面试公司的招聘范围后，要把这些信息储存起来，在薪资协商的时候合理地运用。
+- 第一个说出数字的人就输了
+    - 职业教练杰克·查普曼在《协商你的薪水：怎样一分钟挣 1000 美元》一书中分享了五条协商规则。
+    - 规则一：绝对不要说出你当前的薪水。规则二：绝对不要说出你期望的薪水。规则三：在你面试之前了解你最低能够接受的薪水，以及你想要的一些非货币形式的福利。规则四：等待雇主先定价钱。规则五：给你的开价留点余地，不要断掉所有的路。
+    - 你最好想方设法让雇主先说出一个数字。此外，你最好不要暴露你现在的薪水情况。
+- 薪水不是一切
+    - 不要因为只考虑薪水而扔掉了大部分的谈判权。比如，你在初创公司工作，可以协商工作多少年之后获得多少股份，当初创公司规模扩大之后，你获得的收益会比工资还多。
+    - 如果你想和老板协商工资的话，可以参考以上四点：确定自身价值、确定公司价值、不要第一个说出你的期望薪资、薪水并不代表一切。
 
 
