--- a/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
@@ -3,7 +3,7 @@
 - 02.技能的不同维度
 - 03.能力地图的划分
 - 04.技能地图的落地
-- 05.技能地图的演变
+- 05.构建地图技能树
 - 06.思考需要流程化
 
 
@@ -77,21 +77,53 @@
 
 
 
-#### 4.3 技能地图的实践
-
-
-
-#### 4.4 技能地图的考核
+#### 4.3 技能地图的考核
 - 用这个评估系统自评打分。分值定义如下：0：None –不具备该项能力；1：Basic –具备基本能力；2：Competent –完全具备能力；3：Professional –专家级，可以指导其他人。
 - 针对自身的能力自评：了解职业发展目标，规划成长路线，宏观地判断出能力短板，从而找准能力提升的方向。寻找匹配能力发展的机会以及制定培训计划等方式帮助达成个人成长目标。
 - 注意问题：避免单纯收集了自己的技能数据，没有分析和复盘开展能力发展的讨论，也没有进一步利用这个技能地图开展组织级能力发展的规划。
 
 
 
-### 05.技能地图的演变
+### 05.构建地图技能树
+- 对一部分人而言，学习新技能是一件极其困难的事情。很多人在学习的过程中，会遇到各种各样的问题。比如，不懂得如何进行知识归类、很难明确自己的学习目标等等。
+
+
+#### 5.1 什么是地图技能树
+- 所谓技能树，实际上就是把学习一种知识或技能所需要的分项知识与技能，通过树状图或思维导图式的视觉呈现方式构建出来。
+- 就个人技能树而言，它可能永远没有终点，你可以不断地往个人技能树上添加内容，比如追加新的分项知识与技能、记录自己的学习进展、添加各种学习资源等等。
+
+
+#### 5.2 为何构建地图技能树
+- 1.提高自我意识就提高自我意识而言，技能树主要解决了两个痛点：不清楚现在到底该学什么、不了解如何评估自己是否已达成既定学习目标。
+- 当你构建个人技能树时，需要思考并规划出所有相关的分项知识与技能，同时，还要标注出你目前在这些分项知识与技能方面的熟练或精通程度。这个过程可以帮助你对自己的实际情况做出评估。
+- 2.保持专注。很多人在学习的过程中会感到迷茫，不清楚自己到底该学什么。构建个人技能树的时候，你可以采用“二八定律”帮助自己做决策，明确自己最想要什么样的结果。
+- 3.引导你正确学习。你需要在自己的技能树中添加适合自己的学习材料，你可以通过网络搜索学习资源、请教身边的专业人士、参加讲座或者学习相关课程等等，获得学习材料。
+- 此外，你还需要平衡好各项学习资源，采取多种学习方式。比如，你可以读书、观看视频、亲身实践等等。
+
+
+#### 5.3 如何构建地图技能树
+- 第 1 步：罗列概念、事实和过程。概念、事实和过程的定义是，概念：任何需要理解的内容。事实：任何需要记忆的内容。进程：任何需要练习的内容。
+- 当你首次构建个人技能树时，可以在分栏空白列表中尽可能多的罗列概念、事实和过程，让自己能够以更全面的角度进行分析和思考。
+- 你也可以邀请别人一起讨论、碰撞出更多的想法。与他人一起展开这样的练习，能帮助你理清自己的思路，更加明确自己的想法与目标。
+- 第 2 步：构建个人技能树。以学习骑自行车为例，在构建技能树的时候，你需要先列出概念、事实和进程三个分项，然后再进行展开。
+- 比如，在概念分项下，你需要罗列前灯、轮胎、戴 / 调整头盔、下车、上车等内容。你也可以在技能树中加亮显示你需要关注的内容，这样能够让你进一步保持在核心事项上的专注力。
+- 第 3 步：自我评估与分享。最后这一步非常关键。你需要针对各项技能，对自己的精通程度做评估打分。
+- 你可以采用 0-4 分的打分制：0 分：我什么都不知道。1 分：我只是个入门者。2 分：我水平还凑合。3 分：我还比较擅长。4 分：我都懂，不需要再学什么了。
+- 你也可以与身边的朋友、同事或家人分享你的技能树，邀请他们从其个人角度对你的各分项技能打分。
 
 
 
+### 06.思考需要流程化
+- 每次做成一件事情，学习一种技能，我都会想，能不能把这件事情设计成一个流程？那个针对不同的学习思考方法，能否输出成流程？
+- 大到公司里新的项目，运营方针，小到个人生活里的各种细节，都会想办法从中找出「能够复制和迁移」的关键，用流程的形式把它固化下来。
+- 可以是一系列步骤，可以是一个模型，可以是一套SOP，也可以是一张核对表……不一定要书面化储存，对于一些比较简单的流程，我也会先梳理一下，然后记在脑子里，需要的时候按部就班去用就好。
+- 一旦变成流程，也就意味着：当我再次面对类似的问题时，无需重复操心，可以直接调用我已有的流程来解决它。
+- 比起我花费脑力去分门别类地处理每一件事情，把一切都丢给流程，未必是最好的，但一定是最省力、最小化「不必要的麻烦」的。
+- 流程的本质是什么？是你自身「内在系统」的一部分，亦即你理解外部世界、处理新情境的一种加工模式。一个人成长的过程，很重要的一点，就是不断把新问题、新情境，内化进自己的系统里，成为自己系统的一部分。
 
 
-
+### 07.系统演化的路径
+- 如果把我们看作一个不断成长和演化的系统，那么，你会得到一个启示：
+- 很多时候，其实不是我们自己不断地「往前走」，而是我们的内在系统本身，沿着我们设计的关键节点和路径，自行演化和发展。
+- 也就是说，对我们来说，更重要的，不是去推动自己「我要做什么」，而是找到自己的关键节点，把它们整合成一条路径，再给予自己足够的内驱力。
+- 这就需要你具备一个愿景和目标，并且，能够基于对愿景和自身本质的理解，决定每一个关键节点的方向，让系统始终保持一个稳定的方向。
