--- a/Read/ReadShareWiki/05.生活博客/02.生活感想大集合.md
+++ b/Read/ReadShareWiki/05.生活博客/02.生活感想大集合.md
@@ -13,6 +13,7 @@
 - 13.什么是三观不合
 - 14.承认自己能力有限
 - 15.一年经验用十年
+- 16.克服周一综合症
 
 
 
@@ -280,6 +281,35 @@
     - 你需要延迟当下的满足感，眼光面向未来，站在更高的角度去看待问题，分析市场变化。
     - 跟着时代的步伐，不断地升华自身认知，接触不同的人给予自己的反馈，突围成长，才能破除被“后辈”取代的危机。
     - 只有在工作之余刻意成长，利用碎片化时间不断给自己充电，保持自我更新，系统构建新知识与旧知识之间的联系，形成自己的核心竞争力，增强自己的不可替代性，才能让自己的职业生涯稳步增值，在职场中立于不败之地。
+
+
+
+### 16.克服周一综合症
+- 先说一下背景
+    - 许多上班族都有这样的情况：一到周五晚上就特别开心，因为可以在家里休息两天；而一到周日的下午，心情就开始变得非常沮丧和懊恼。
+    - 因为第二天又要上班了；接着，周一早上提不起精神。这种情况被称为“星期一综合症”。
+- 为什么会出现“星期一综合症”？
+    - 很多热爱工作的上班族都说自己讨厌星期一，其实他们真正讨厌的并不是星期一，而是星期一所象征的一切。
+    - 从学生时代开始，星期一就一直都是我们日程安排的第一天，星期五则是最后一天。
+    - 很多上班族都喜欢在星期五早点下班，尽快享受假期，但这个行为也无意间将更多的任务推到了周一，最后导致周一的任务更重。
+    - 之所以出现“星期一综合症”，还有一个原因在于很多人没有利用好周末，具体表现在周末充电不足、周末没有计划等等。
+    - 此外，由于每周有五个连续的工作日，星期一离下一个可以休息的日子最远，所以我们很容易对此产生消极情绪。
+- 如何克服“星期一综合症”？
+    - 我们可以通过以下三个方法克服“星期一综合症”。
+    - 1.把星期五当作一周的第一天很多人一想到星期五，就会觉得很快乐、放松。与其把周五当成繁忙一周的结束，不如把它当成下一周的垫脚石。在周五就开始计划下周一的工作，等到下周一的时候再进行更好的修改。记住，伟大的周一始于周五。
+    - 2.用周末充电而不是恢复很多人都有周末做杂务的习惯，你可以把做杂务的工作放在工作日晚上，最好在周五结束之前做好，别让琐事占据了你的周末时间。此外，周末最好也不要工作，不然你会感觉非常累，精力枯竭，从而没有很好的精神状态迎接下一周。如果你把每件事都推到周日，就会让自己筋疲力尽，导致习惯性的倦怠。在周末，你可以提前安排好自己的时间，做一些能让你感到快乐的事情。比如，做瑜伽、泡热水澡、做饭、读书、打盹、画画或写作等等。
+    - 3.用积极的心态迎接周一当你在星期五开始做下周的工作，并在周末的两天时间里好好充电的话，你会发现周一也没有那么可怕，它只是一周里面普通的一天。你可以在周一给自己一些心理暗示，试着问自己几个问题：你为什么选择这份工作？你的工作对社会有什么贡献？你在全局中处于什么位置？让自己找到工作的意义，从周一的所有消极情绪中解脱出来。
+
+
+
+
+
+
+
+
+
+
+
 
 
 
