--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -122,4 +122,4 @@
 
 
 
-
+mvn deploy:deploy-file -Dfile=/Users/yangchong/Downloads/meachine_sdk-release_1.1.1.aar -DgroupId=com.tencent.weixiao -DartifactId=DeKaSDK -Dversion=1.1.1-snapshot -Dpackaging=aar -DrepositoryId=weixiao_snapshot -Durl=https://mirrors.tencent.com/repository/maven/weixiao_snapshot
