--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -45,7 +45,8 @@
   - 是因为该Android机器中已经存在了比这个应用的版本号更高的同包名应用。
 - 解决方法：
   - adb install -r -d C:\Users\zl\Desktop\xxx.apk(包名)
-
+- adb 杀死 apk 进程
+  - adb shell am force-stop 包名
 
 
 ### 04.adb清app缓存
