--- a/Read/YCBlogWiki/android/15.经典总结/08.Android混淆梳理.md
+++ b/Read/YCBlogWiki/android/15.经典总结/08.Android混淆梳理.md
@@ -1,5 +1,5 @@
 #### 目录介绍
-- 01.什么是混淆
+- 01.什么是代码混淆
 - 02.为什么要进行混淆
 - 03.官方默认混淆配置
 - 04.Studio开启混淆配置
@@ -11,24 +11,18 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【15年10月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计500篇[近100万字]，将会陆续发表到网上，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-
-
-
-### 01.什么是混淆
+### 01.什么是代码混淆
 - 混淆代码
     - 混淆分为两种代码混淆和资源文件混淆。实际的产品研发中为了防止自己的劳动成果被别人窃取，混淆代码能有效防止apk文件被反编译，进而查看源代码。
 - Android如何混淆
-    - android提供了Progurd方式来混淆apk中的代码，其核心的逻辑是在代码层将一些易懂的源代码类名，方法名称替换成毫无意义的a、b、c、d...，这样当第三方反编译出你的Apk文件时，看到的源代码也无法还原其本身的逻辑，或者代码中方法，类，对象等变成无法阅读的字母。
+    - android提供了ProGuard方式来混淆apk中的代码，其核心的逻辑是在代码层将一些易懂的源代码类名，方法名称替换成毫无意义的a、b、c、d...
+    - 这样当第三方反编译出你的Apk文件时，看到的源代码也无法还原其本身的逻辑，或者代码中方法，类，对象等变成无法阅读的字母。
 
 
 
 ### 03.官方默认混淆配置
 - 其实在android Studio中做混淆，基本就是对Proguard-rules.pro文件的操作。混淆的过程也是有规律可循的。先看看官方的proguard-android.txt文件，位于/tools/proguard目录下，不知道怎么写，可以当成模板，复制一份出来到自己的工程，改成自己项目所需的混淆配置。内容如下：
-    ``` java
+    ```
     # This is a configuration file for ProGuard.
     # http://proguard.sourceforge.net/index.html#manual/usage.html
     
@@ -110,7 +104,7 @@
 
 ### 04.Studio开启混淆配置
 - 很简单，只要设置minifyEnabled为true即可。
-    ``` java
+    ```
     buildTypes {
             release {
                 minifyEnabled true//true开启混淆配置，false关闭
@@ -124,7 +118,7 @@
 
 ### 05.Android混淆通用规则
 - 1.系统混淆配置
-    ``` java
+    ```
     # 设置混淆的压缩比率 0 ~ 7
     -optimizationpasses 5  
     # 混淆时不使用大小写混合，混淆后的类名为小写
@@ -451,7 +445,6 @@
 
 
 #### 02.关于我的博客
-- 我的个人站点：www.yczbj.org， www.ycbjie.cn
 - github：https://github.com/yangchong211
 - 简书：http://www.jianshu.com/u/b7b2c6ed9284
 - csdn：http://my.csdn.net/m0_37700275
