--- a/Read/ReadShareWiki/02.生活博客/03.生活笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/03.生活笔记大集合.md
@@ -1,6 +1,8 @@
 #### 目录介绍
 - 01.忙碌中高效产出
 - 02.个人成长的陷阱
+- 03.没有机会去试错
+- 04.向上汇报坏消息
 
 
 
@@ -65,6 +67,59 @@
     - 不要呆在舒适区，你需要主动打破对舒适区的依赖，进入学习区，学习新的事物。
     - 另外，要避开恐慌区。很多人在学习新知识的时候，会出现焦虑情绪。因为人总想“一口吃成个胖子”，殊不知直接冲进自己完全无法掌握的领域，会让自己产生极大的挫败感，进而带来更大的问题：沮丧、失望、放弃。
     - 一言以蔽之，永远在学习区做边缘探索。保证难度适中，并及时反馈，能够感受到成长，你就很容易体会到学习与成长带来的快感。
+
+
+
+### 03.没有机会去试错
+- 先说一下背景
+    - 有时候选择就像拆盲盒你不知道你接下来会拆出个什么玩意儿，但是做选择好一点的是我们知道即将做出的选择会让我们知道该往哪个方向走。
+    - 以前说只要想做，什么时候都不晚，现实是：就算不晚，但留给我们试错的机会却不多。这里的试错，主要是指那些需要付出极大代价的尝试。
+    - 比如：
+- 平凡人很难有试错机会
+    - 我们可以尝试去做很多事，时间也好，经济状况也罢，都允许我们有试错的机会，但是相对于大多数平凡的我们来说，机会很多但试错的机会真的很有限。
+    - 一是我们时间上不允许有太多试错机会。我们可以摸索着前行慢一点也没关系，但一旦出错这样的机会就不会再有，时间不会停滞不前；
+    - 二是现实生活不允许。因为我们都有家庭，家庭不会允许你一直试错，也不会一直陪着你去试错，要生活下去柴米油盐就不能避免；
+    - 三是对于平凡的大多数家庭经济等情况不会给予太多试错机会。因为我们是错的成本太大，我们需要靠自己承担错误的代价，而有时候自己无法承受代价，这个有区别于那些富裕的家庭。
+- 老老实实打工
+    - 所以对于平凡的大多数来说：要么一开始就接受平凡，做一个打工人，然后在这条道路上发光发热做到无可取代。
+    - 要么在进入社会以前好好考虑提升自己，找准自己擅长的领域并为之奋斗然后实现目标，不断崛起。
+    - 理想是丰满的，现实很骨感，生活中总会有或多或少的无奈存在，所以别抱怨，努力负重前行，不放弃不抛弃比什么都重要。
+
+
+
+### 04.向上汇报坏消息
+- 先说一下背景
+    - 职场沟通中，关于向上汇报工作的文章不在少数，但鲜有提到“如何向上汇报坏消息”。
+    - 这种让人“脑壳疼”的情况其实时常出现在我们的工作中，需要每一位职场人士认真思考如何应对。
+- 看一个故事案例
+    - 曾经，曾国藩统帅湘军与太平天国作战，初期各种不顺，各种被虐，但他始终坚持“结硬寨，打呆仗”，一点一点扳回局势。
+    - 某一次吃了败仗后，属下起草好向朝廷汇报战况的奏折给曾国藩批阅，他把奏折中提到的“屡战屡败”改为“屡败屡战”，一下子立意就高大了很多。
+    - 这背后的逻辑是从积极、正向的视角来重新定义和呈现问题，然后再具体解决问题。
+- 如何向上汇报坏消息
+    - 也许会说我们远远达不到曾国藩的高度，但是今天，每一个职场人士也都会有这样的经历，那就是要向公司领导，甚至是向甲方汇报一些坏消息。
+    - 对于如何向上汇报坏消息，我有三点建议：不要回避问题；不要逃避责任；要有对策和行动。
+- 不要回避问题
+    - 所谓报喜不报忧，很多时候我们都害怕汇报坏消息。在职场中，汇报好消息会让领导对你赞许有加，而汇报坏消息很可能会让对方雷霆震怒，接下来对你一顿猛批，甚至影响你今后在组织或团队的发展。
+    - 很多人会想各种办法去掩盖问题，或者尽量拖延、隐瞒不报。客观说，这种做法极不可取，一来是错过了纠偏改正的黄金时间，二来会给组织或者团队造成更大伤害，当事人往往在最后也被迫承担更坏的结果。
+    - 另外，如果坏消息被领导发现，或者经由他人之口告诉了领导，你再被传唤当面质问，后果就会更加糟糕。
+    - 所以，向上汇报坏消息的第一个法则是：第一时间，亲自汇报。你的开场白可以是：“领导，我真的很抱歉，但关于我们正在实施的项目，有一个不太好的消息我想第一时间跟您汇报一下……”
+    - 与此同时，你也要告诉领导：“我觉得，这次项目失败一定程度上暴露了我们当前存在的很多问题……”
+- 不要逃避责任
+    - 在汇报坏消息的过程中，领导一定会问，什么原因造成今天的问题？谁对问题负有主要责任？
+    - 这个时候，你有两个选择：外归因和内归因。
+    - 所谓外归因，就是向领导或者向客户诉苦，并且试图撇清自己的责任，比如“老板，我们真的已经尽力了，但今年市场环境真的太差了，竞争对手又投入了比我们更多的促销资源，我们的供应链又特别不给力，总是掉链子……”
+    - 但是，请记住，这种外归因的做法极不可取，会让领导认为你没有担当，难堪重任。
+    - 正确的做法就是内归因，真挚诚实地剖析问题的本质以及你的责任在哪里。
+    - 所以，向上汇报的第二个法则是：直面问题，主动担责。但凡员工能够做到这一点，领导通常不会过分纠缠在问题本身上，因为已经造成的损失属于客观现实，无法改变。
+    - 一旦领导识别到你的态度正面积极，他就会主动跟你一起讨论问题的解决方案。要有对策和行动
+- 要有对策和行动
+    - 向上汇报坏消息要想转变危机的关键在于你是否真正能看清楚局势，想清楚问题，能否向领导提供切实有效的解决对策。
+    - 对于领导而言，他最关心的就是，你有没有想清楚接下来的应对策略，可不可以一步一步落地执行，能不能够最大程度地替公司挽回损失。
+    - 向上汇报坏消息的第三个法则是：卷起袖子，搞定问题。你需要跟领导讲清楚：在向他汇报之前，你已经快速采取了哪些举措，跟他汇报完之后，你还会实施哪些行动，包括具体步骤、执行时间、预测结果等。
+- 最后要说一下
+    - 当整件事得以完整或者部分解决，请记住一定要向领导再做一次完整的汇报。
+    - 优秀员工除了告诉领导最终结果以外，还会向领导呈现一套优化后的机制、系统或流程，用于预防今后类似问题的出现或者推动问题更为高效地解决。
+
 
 
 
