--- a/Read/ReadShareWiki/02.生活博客/03.生活笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/03.生活笔记大集合.md
@@ -3,6 +3,7 @@
 - 02.个人成长的陷阱
 - 03.没有机会去试错
 - 04.向上汇报坏消息
+- 05.生活中键盘大侠
 
 
 
@@ -121,6 +122,27 @@
     - 优秀员工除了告诉领导最终结果以外，还会向领导呈现一套优化后的机制、系统或流程，用于预防今后类似问题的出现或者推动问题更为高效地解决。
 
 
+
+### 05.生活中键盘大侠
+- 先来看一下背景
+    - 对于键盘大侠，相信不过做过多的解释，许多人都知道。
+- 来看几个案例
+    - 第一个案例：不知道，你身边是不是有这样一种人：如果那里发生了灾难，他们会比较明星捐款的数目，倘若有的名人捐的少或者没有捐，那么他们便会大义凛然，号召别人捐款更多。
+    - 有的人还想，如果自己有这么多钱，一定会捐的更多，这些键盘大侠当然也不会考虑别人的感受，总之他们在网络上的形象永远是那么的高大上。
+    - 第二个案例：如果有什么明星八卦，有人失恋了，有人离婚了，他们便会把这个作为谈资，为了别人发生事情而感动或者愤怒。
+    - 留言评论谩骂，好像站在自己的角度，自己表现的十分具有正义感，或者彰显自己关心明星的善良品行。
+    - 第三个案例：如果有那个明星意外过世了，或者不幸遇难了，他们会为别人而祈祷，发微博，还有的会办活动为别人祈祷，并且一定会拍照或者制作视频，因为这样发朋友圈或者微博，朋友们或者网友们才知道自己是多么关心别人。但是倘若不发朋友圈或者微博，那么认为付出的岂不会是白费力气。他们号召大家珍惜当下，珍爱健康。
+    - 第四个案例：如果热点新闻报道了某国与我国的军事矛盾，他们便会十分刚强的说，坚决抵制某国货物，谈起军事来头头是道，把自己的勇气与眼界完全用语言展示了出来。甚至动辄就称“XX必有一战”，自己捐多少钱。
+- 现实和网络的差距
+    - 然而事实时，他们许多人每个月赚的不多，有的难以保证家庭正常开支，单位同事病了，自己都舍不得花钱买点东西给别人，总是想着要是自己有钱了会怎样怎样。
+    - 他们许多人总是关注别人的恋爱八卦，却总是为了点小事跟爱人闹得不开心，也难以包容，却总是对别人的生活评头论足。
+    - 他们许多人总是号召别人珍惜健康，多运动，然而自己却总是熬夜，生活不规律，因为别人也不知道自己生活情况，所以说出那些话，可以表现自己是一个积极健康的人。
+    - 他们许多人对待矛盾，喜欢谈到武力，然而看到街上有小偷，或者有人被欺负，或者有人被车撞了，却不敢去帮助别人，因为害怕自己受到伤害，能说明这是什么问题吗。
+- 网络上的大侠
+    - 因为说一说，表一表情怀，表现自己上进，大义凛然，并不会让自己失去什么。但是一旦去行动，那就得考虑后果。他们在网络中格外上进，在真实的生活里，却完全换了个样。
+    - 人们常将自己的错误归结于外界条件，而将别人的错误归结于内在秉性。但我们往往看见别人的缺失，却意识不到自己身上更大的缺失。
+    - 评价的成本太低，但其实反应的是我们失去了一种思考的能力和宽容的态度。
+    - 对一件事情指指点点只用花费几秒钟，但是大部分人不愿意花费精力去理解事情为什么发生，或者发生会导致出现什么问题……而是无限的指责或者议论……
 
 
 
