--- a/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
+++ b/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
@@ -1,5 +1,6 @@
 #### 目录介绍
 - 01.什么是沟通能力
+- 03.有效沟通三部曲
 - 06.沟通中合理提问
 - 07.三明治的沟通法
 - 08.螺旋推进沟通法
@@ -17,6 +18,23 @@
 - 在沟通过程中要时刻有意识地提醒自己：沟通是有目的的：你的初衷是什么？你现在的行为和言语有没有妨碍你完成你的初衷？沟通是多向信息交流：你有让对方了解到你的真实想法吗？你了解到对方的真实想法了吗？
 
 
+### 03.有效沟通三部曲
+#### 3.1 看一下背景
+- 生气的理由有千万种，但吵架并不能解决问题，只是在宣泄情绪。所以，气头上的姑娘，你多说讲一句大道理都是火上浇油，你稍微大声点说话就是在凶她!
+- 这时候她更多的是需要被哄，被道歉，被亲亲，被抱抱，被理解她有可以生气的“偏爱”。
+- 等那股气下头之后，才是双方共同解决问题之时，明事理的姑娘，不会让你哄太久，也不会逃避问题。
+
+
+#### 3.2 为何哄她无效
+- 在女生生气的每一个瞬间，总有“正义使者”加身的男友，试图讲道理、分对错、明是非。
+- 不证明是女友无理取闹不罢休，或者用男生理性思维想要，弄清缘由，当场解决问题，结果当然是无效啦。
+
+
+#### 3.3 做到有效沟通
+- 第一步：首先接纳她的情绪，并舒缓她的情绪。说白了就是先哄，给她一个抱抱，让她冷静下来。 情绪上头真心不是解决问题的好时机。
+- 第二步：其次问清生气的原因。任何矛盾都有导火索，也许是针对事情本身，也许是对过去旧账的延伸，也许是情绪的累积，等她冷静下来，愿意沟通时候，双方再好好沟通谈心。
+- 第三步：最后才是寻求解决方案。问题摆在眼前，双方的共同目的就是怎么一起解决问题，如何在未来规避同样的问题，而不是解决提出问题的人。
+- 最后时刻记住，吵架只是情绪宣泄，不是解决方式。为了甜甜的爱情能安稳着陆，男生女生都要多一些理解多一些包容，多一些努力，真诚沟通，双向奔赴。
 
 
 
