--- a/Read/ReadShareWiki/02.生活博客/03.生活笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/03.生活笔记大集合.md
@@ -4,6 +4,11 @@
 - 03.没有机会去试错
 - 04.向上汇报坏消息
 - 05.生活中键盘大侠
+- 06.六顶帽子思考法
+- 07.情商缔造领导力
+- 08.技术人商业头脑
+- 09.具备结构化思维
+- 10.六分赚钱的法则
 
 
 
@@ -143,6 +148,116 @@
     - 人们常将自己的错误归结于外界条件，而将别人的错误归结于内在秉性。但我们往往看见别人的缺失，却意识不到自己身上更大的缺失。
     - 评价的成本太低，但其实反应的是我们失去了一种思考的能力和宽容的态度。
     - 对一件事情指指点点只用花费几秒钟，但是大部分人不愿意花费精力去理解事情为什么发生，或者发生会导致出现什么问题……而是无限的指责或者议论……
+
+
+
+### 06.六顶帽子思考法
+- 背景介绍一下
+    - 我们经常会在头脑中出现一些很棒的想法，但却很少有人将这些想法落地，有时甚至会被其他信息干扰，影响到想法的质量。那么，该如何在思维更宏观的同时保持头脑清醒呢？
+    - 摩尔认为我们可以通过学习“六顶帽子思考法”平行思维，有效处理信息，避免因自负而导致的“一叶障目，不见泰山”。
+- 什么是六顶帽子思考法
+    - “六顶帽子思考法”是心理学家、发明家爱德华·德·波诺（Edward de Bono）在上世纪 80 年代设计的一个系统性方法。
+    - 这个方法通过让人们戴上代表不同心态和情绪的“帽子”，使人们可以从不同角度看待一个想法，这样每次关注的焦点也会不同。
+    - 爱德华·德·波诺认为，人们在思考时遇到的主要难题就是混乱。很多人喜欢一次性做太多事情，使得各种情感、信息、逻辑、希望和创造力一起涌来，最终导致很难有效、有针对性的进行思考。
+- 使用场景介绍
+    - “六顶帽子思考法”最初是为了让会议更有成效而设计的，后来，这个方法被创意界用来点评创意，因为它可以让人们在一个相对安全的空间里，变得既有创意又大胆，同时也迫使人们变得更加现实。
+- 第一顶帽子：蓝帽子
+    - 也被称为管理帽子。它要求我们在开始讨论前先框定一个想法的大致轮廓，在结束讨论后做总结并得出结论。
+    - 有了这顶帽子，你可以退后一步，从更宏观的视角来审视自己的想法，并清楚在审视期间和审视之后应该思考些什么。
+- 第二顶帽子：白帽子
+    - 戴上这顶帽子，你的主要目标就变成了寻找事实和数据，从而为想法提供相关的事实和信息。你可以在此期间问自己几个问题，比如这个概念的基本形式是什么？
+    - 它的目的是什么？它的服务对象是谁？此外，这顶帽子还能让你明确自己的知识和预期目标之间的存在哪些差距。
+- 第三顶帽子：黄帽子
+    - 这顶帽子能带来一些正能量，并确立你工作的价值。你可以问问自己：这个想法好在哪？
+    - 它会带来什么好处？不过，你也要适当地控制一下热情，让自己保持冷静，找出真正的价值后，再对它充满期望。
+- 第四顶帽子：红帽子
+    - 这顶帽子中藏着你的情绪，戴上这顶帽子，你就要从你的想法中寻找情感反馈。你可以问自己几个问题，比如这个想法让你感觉如何？
+    - 你第一次看到这个想法时的反应是什么？思考完这些，你再换位思考下，别人看到这个想法会有什么反应呢？
+- 第五顶帽子：黑帽子
+    - 这是一顶否定和质疑的帽子。戴上这顶帽子，你就要问问自己：为什么这个想法行不通？问题和缺陷在哪里？
+    - 在发现潜在的问题后，你要消除这些问题，并将当前的想法继续完善。不过，在与人讨论的时候，你不要过早地戴上这顶帽子，因为它会阻碍到可能出现的一些积极想法。
+- 第六顶帽子：绿帽子
+    - 这顶帽子预示着想象力和和创造力。当你意识到了潜在的问题和缺陷时，你会如何解决它们？你可以问自己几个问题寻找解决方法，比如有什么可以进一步完善和提升的地方？
+    - 你是否有了一个全新的想法？新想法又是什么呢？戴上绿色的帽子，你可以尽情地发挥创造力，开始新的头脑风暴。
+
+
+### 07.情商缔造领导力
+- 先说一下背景介绍
+    - 所有与人相关的事故都和情绪有关，如果能够提高情商，妥善管理情绪，多数事故就可以避免。
+    - 同样，在职场中，管理者如果能够妥善管理情绪，也能更好地对上协作配合、对下缔造领导力。
+    - 管理情绪，其实就是掌控四种情绪：知道别人的情绪、管理别人的情绪、知道自己的情绪和管理自己的情绪。
+- 知道别人的情绪
+    - 要想知道别人在想什么，就得站在对方的角度去思考；要想站在对方的角度去思考，就需要知道对方的年龄、性别、健康状况、家庭背景、学历、行业、经验等等。
+    - 换位加揣摩，能够最大可能地估计出对方的情绪状态。在这里，鬼谷子思想具有直接的应用价值。
+    - 鬼谷子认为，揣情摩意要在对方高兴的时候，就能够了解他的欲望，对方有了欲望，就无法隐藏他真实的性情；当对方愤怒的时候，就可以了解他的仇恨，对方有了仇恨，就无法隐藏他的真实性情。
+- 管理别人的情绪
+    - 管理别人的情绪很难，主要的方式有：赏识对方、批评自己、传递自己积极的情绪。
+    - 此外，可以灵活运用鬼谷子推崇的沟通、恐惧和诱因的力量，也可以参考领导学推荐的领导者主要领导行为。
+- 知道自己的情绪
+    - 了解自己要通过内省与照镜子，养成反思的习惯，每天对自己愉快和不愉快的经历反思：
+    - 为什么别人说我好？为什么别人总说我坏话？为什么别人总发火？为什么自己开心？为什么自己不开心？为什么别人乐于接近自己？为什么别人远离自己？
+    - 怀有一颗平常心，锻炼得职业化一些。多一些理智，少一些冲动。
+- 管理自己的情绪
+    - 管理情绪的目的是消除不良情绪，塑造阳光心态，延长积极情绪的时间，缩短消极情绪的时间。主要方法有“操之在我”和提升情感强度。
+    - 另外，不要被别人的不良情绪影响，成为连锁反应的牺牲品，要把握好自己的情绪。其次，在使用情商进行情绪管理的时候，就需要提升情感强度。
+    - 情感强度指感情的承受力。情感强度足够的人能够实事求是地面对组织中存在的问题，有勇气和自信解决组织中的冲突，敢于替换能力不强的人，敢于用能力比自己强的人。
+
+
+
+### 08.技术人商业头脑
+- 先看下背景介绍
+    - 工程师要不要具备商业头脑呢？对于这个问题，答案众说纷纭，不过可以肯定的是，有商业头脑的技术人，通常都会判断技术和业务之间的关系。
+    - 而公司的发展离不开业务，技术人拥有商业头脑更有利于自己的职业发展。
+- 在产品经理眼中，有商业头脑的技术人大致有四个特点：
+    - 理解业务。具体一点讲，明白当前业务的现状、目标和方向，清楚为什么要做以及做了以后能给业务带来的价值。
+    - 了解技术实现的细节。比如当前的业务产品在系统中是怎么实现的，有哪些能力和局限，与上下游的关系是怎样的？如何能够快速实现目前的产品需求？很多时候同一个问题可以有多种技术实现，每种实现都有自己的优缺点。优秀的技术同学能够基于对当前业务问题的理解，做出最恰当的选择。
+    - 能给到产品有效的输入。对产品设计不合理的地方提出挑战和有建设性的意见。对产品设计遗漏的地方给予补充，对稳定性、安全性，以及资损、舆情、PR 等潜在的风险给予意见和建议。
+    - 积极地沟通和推动项目落地。帮助产品一起管理好业务的预期，也能够换位思考，理解业务面临的压力，管理好项目的风险，保持信息的透明，想尽办法帮助业务实现需求。
+- 培养商业头脑需要一个过程，以及可借鉴的培养方法。
+    - 第一，要了解业务，最快最有效的途径就是通过和你对接的产品同学。多和对方交流，认真参与每次 PRD 评审、产品规划、总结分享。并且要多提问，你会逐渐成长为领域的业务专家，至少可以和产品平等对话。商业头脑更多的是一种思维方式和习惯，多与产品讨论业务，业务思考的角度就会自然形成。
+    - 第二，培养数据意识。学会用数据来说话，首先从业务核心的 KPI 入手，牢记它。并学会问自己，项目的目标是什么？与业务 KPI 有什么关系？如何埋点、如何追踪？数据如何变化，变化背后的业务含义是什么？
+    - 第三，深入了解自己的业务领域。这包括以下几点：对自己负责的业务领域，有基本的业务框架认知；了解业务发展的前景、现状和痛点；对业务单元的主要角色有深入了解；
+    - 第四，拓展自己的知识边界。包括日常的财经新闻、评论、重要的商业事件、互联网公司的上市财报、竞争对手的动态、朋友圈动态等等。
+    - 第五，补充专业知识。要想真正成为一名业务专家，那么，基本的经济学常识、行业知识、商业分析的模型和框架等都开始变得重要。跨学科的知识往往能够帮助你拓展思维方式和思考深度，带来创新。
+
+
+
+### 09.具备结构化思维
+- 先说一下背景介绍
+    - 在工作中，或许你也碰到过这样的情况，有的人讲事情逻辑混乱，罗列了很多事项，却把握不到重点，无法把一件事情说清楚。这是典型的缺少结构化思维的表现。
+    - 结构化思维非常重要，不仅仅体现在表达上，也体现在在分析问题的过程中。具备结构化思维，才能将问题分析地更全面、更深刻。
+- 那么到底是什么是结构化思维呢？
+    - 简单来说，结构化思维的定义就是：逻辑 + 套路。所谓逻辑是指结构之间必须是有逻辑关系的。即顺序符合逻辑、内容符合逻辑。
+- 想让内容有逻辑关系，需要学会四种组织思想的逻辑关系：
+    - 演绎（因果）顺序：“大前提、小前提、结论”的演绎推理方式就是演绎顺序。
+    - 时间（步骤）顺序：如“首先、然后、再者”，很多的时间顺序同时也是因果顺序。
+    - 空间（结构）顺序：“前端、后端、数据”，化整为零等都是空间顺序。
+    - 程度（重要性）顺序：比如“最重要、次重要、不重要”等。
+- 进行结构化思考。具体怎么做呢？
+    - 主要有两个步骤，先“建立中心”，再进行“分解”。
+- 建立中心就是定义清楚要解决的问题，即明确目标。建立中心有两种方式：
+    - 自上而下：适用于问题比较明确的情况，你只需要找到问题的核心要素，然后将它展开即可。
+    - 自下而上：对于问题不够明确的情况，你需要对多种杂乱的内容，进行分类、剪枝、归纳汇总成一个中心。
+    - 比如面对“系统 bug 多”的问题，向上是“提升代码质量”，向下是“加强测试”，选择哪个为中心取决于你当前要解决的问题是什么。
+- 分解的策略就是上文提到的四种逻辑顺序，即演绎顺序、时间顺序、空间顺序和程度顺序。
+    - 那么，如何应用结构化思维呢？想象这样一个场景，你作为技术人，刚加入一个新团队，你将如何落地开展你的工作？
+    - 对于企业来说，核心要素无外乎就是业务、技术和人，也就是说这三个要素是你要建立的中心。基于这个中心再分解，并进行分析，找到应对策略。这样一步步递进，你就已经在用结构化思维解决问题了。
+    - 首先，熟悉业务；其次，熟悉技术；最后，熟悉人。
+
+
+
+### 10.六分赚钱的法则
+- **先来看一个小故事**
+    - 记者问李泽楷：“你的父亲李嘉诚究竟教会了你怎样的赚钱秘诀？”李泽楷说：“父亲从没告诉我赚钱的方法，只教了我一些做人处事的道理。”记者大惊，不信。
+    - 李泽楷又说：“父亲叮嘱过，你和别人合作，假如你拿七分合理，八分也可以，那我们李家拿六分就可以了。”
+    - 细想一下就知道，李嘉诚总是让别人多赚两分，所以，每个人都知道和他合作会占便宜，就有更多的人愿意和他合作。
+- **明白的道理**
+    - 说到这里，终于弄明白一个道理：做人最高的境界是厚道，所以精明的最高境界也是厚道。
+    - 如此一来，虽然他只拿六分，生意却多了一百个，假如拿八分的话，一百个会变成五个。到底哪个更赚呢？奥秘就在其中。
+- **现实中的精明是智慧嘛**
+    - 许多人最初犯下的最大错误就是过于精明，总是千方百计地从对方身上多赚钱，以为赚得越多，就越成功，结果是，多赚了眼前，输掉了未来。
+    - 七分合理，八分也可以，那我只拿六分。但凡在利益冲突面前，不为所动保持初心的人，往往内心豁达，品行优良，做事肯为对方考虑，从不计较个人得失。
+    - 那些喜欢斤斤计较，唯利是图的人表面上没有吃亏，可最终输掉的却是自己的口碑，这种人往往缺少优质的合作伙伴，更没有真心的朋友，很容易走向自己人生的死胡同。
 
 
 
