--- a/Read/ReadShareWiki/02.生活博客/24.关于人脉的思考.md
+++ b/Read/ReadShareWiki/02.生活博客/24.关于人脉的思考.md
@@ -106,8 +106,8 @@
 - 5、别把你留到好友或者牛人的电话当作炫耀，你以为你和对方留了电话存了微信，应该彼此能帮忙，却忘记了一件很重要的事情：只有关系平等，才能互相帮助。在没有感情基础的前提下，人脉不人脉，全拼综合实力。对于弱逼来说，一些所谓人脉，看似全线飘红，实则虚假繁荣。
 - 6、如果你自己不强大，那些社交其实没有什么用，只有等价的交换，才能得到合理的帮助。在你还没有足够强大足够优秀的时候，先别花太多那些宝贵的时间去社交，先花点时间读读书提升一下专业技能。
 - 7、真朋友，不适用于以上的规则。无论什么时候，他都愿意帮助你，无论你贫穷还是窝囊，因为你们共同经历过一些事情，他们总是不离不弃。你们的帮助，不用等价交换，只用感情平等，就好。这种人不用多，在这个浮夸的世界里，几个就好。
-- 8.和谁都别熟得太快，不要以为刚开始话题一致共同点很多你们就是相见恨晚的知音，很多时候飞快地掏心掏肺，却因为莫名其妙的事情最后老死不相往来，语言很多时候都是假的，一起经历的事情才是真的，好人往往嘴贱，坏人往往嘴甜。时光会教你看清每一张脸，也许有一些人，慢一点，会和他们成为真正的朋友。
-- 9.专心做可以提升自己的事情，学习并拥有更多更好的技能，学会独善其身，以不给他人制造麻烦为美德；用你的独立赢得尊重。一个人的幸福程度，往往取决于他多大程度上可以脱离对外部世界的依附。
+- 8、和谁都别熟得太快，不要以为刚开始话题一致共同点很多你们就是相见恨晚的知音，很多时候飞快地掏心掏肺，却因为莫名其妙的事情最后老死不相往来，语言很多时候都是假的，一起经历的事情才是真的，好人往往嘴贱，坏人往往嘴甜。时光会教你看清每一张脸，也许有一些人，慢一点，会和他们成为真正的朋友。
+- 9、专心做可以提升自己的事情，学习并拥有更多更好的技能，学会独善其身，以不给他人制造麻烦为美德；用你的独立赢得尊重。一个人的幸福程度，往往取决于他多大程度上可以脱离对外部世界的依附。
 
 
 
