--- a/Read/ReadShareWiki/03.故事历史/01.生活哲理小故事.md
+++ b/Read/ReadShareWiki/03.故事历史/01.生活哲理小故事.md
@@ -5,7 +5,6 @@
 - 05.世间需用三类爱
 - 06.知道人穷断六亲吗
 - 07.
-- 09.武侠爱情悲剧多
 
 
 
@@ -20,10 +19,13 @@
     - 正所谓人微言轻，通常而言在你混得比别人稍差的时候，哪怕别人嘴上不说，但心里也往往会有所轻视，这是人之常情。
 - **看一个古代的典故**
     - 当初战国时期的纵横家苏秦在外出做事失败以后，他的妻子父母都不愿意与他说话，在这种情况下如果苏秦一定要赖着脸皮去跟妻子父母说话，那他也只能是自讨没趣生甚至是自取其辱。
-    - 所以苏秦在这种人生穷困的状态下，也并没有多说什么话，而是发奋研读经典，又一次外出做事，最终功成名就，等到他再回来的时候，他的父母妻子带领着队伍出城数里去迎接，这就是生命的一种常态。人在生活不如意的时候，所说的话往往不为人所重视，尤其在对人进行劝诫的时候更是容易遭人冷眼。
+    - 所以苏秦在这种人生穷困的状态下，也并没有多说什么话，而是发奋研读经典，又一次外出做事，最终功成名就，等到他再回来的时候，他的父母妻子带领着队伍出城数里去迎接，这就是生命的一种常态。
+    - 人在生活不如意的时候，所说的话往往不为人所重视，尤其在对人进行劝诫的时候更是容易遭人冷眼。
 - **这句俗语下半句**
-    - 在“人穷别说话，位卑莫劝人”的后面，还有着更为经典的下半句，那就是“力微休负重，遭难莫寻亲”，更是说透了人性的现实。所谓“力微休负重”就是说不要去承担超出自己能力范围的责任，这样不仅仅很难把事情做好，而且还容易让自己陷入到危险的境地之中，并没有人会因此而关心你，反而会有很多人因此而嘲笑你的不自量力。
-    - “遭难莫寻亲”就更加现实了，说的是当人在遭遇到生活中的那一些困难的时候，要尽可能的自己想办法解决，而不是去寻求亲人的帮助，正所谓“穷在闹市无人问，富在深山有远亲”，亲人是一种很奇特的存在。在清朝文人沈复的《浮生六记》中，他与妻子遇到急需的费用，向各自的亲人借钱，结果受尽了冷眼，从此发誓不再去求任何亲人任何事，以免再受屈辱。
+    - 在“人穷别说话，位卑莫劝人”的后面，还有着更为经典的下半句，那就是“力微休负重，遭难莫寻亲”，更是说透了人性的现实。
+    - 所谓“力微休负重”就是说不要去承担超出自己能力范围的责任，这样不仅仅很难把事情做好，而且还容易让自己陷入到危险的境地之中，并没有人会因此而关心你，反而会有很多人因此而嘲笑你的不自量力。
+    - “遭难莫寻亲”就更加现实了，说的是当人在遭遇到生活中的那一些困难的时候，要尽可能的自己想办法解决，而不是去寻求亲人的帮助，正所谓“穷在闹市无人问，富在深山有远亲”，亲人是一种很奇特的存在。
+    - 在清朝文人沈复的《浮生六记》中，他与妻子遇到急需的费用，向各自的亲人借钱，结果受尽了冷眼，从此发誓不再去求任何亲人任何事，以免再受屈辱。
 
 
 
@@ -72,22 +74,6 @@
     - 当我们贫穷时，我们自己不要看不起自己，不要因为一时穷，而自卑，总认为亲戚看不起你，从而不再同亲人交往，这种行为就是你主动断了亲戚。实际上，毕竟血溶于水，关键时刻有时还得靠亲人的帮助。如果我们一时不顺，我们一定要放低姿态，虚心向亲人学习，争取努力成功！同时，一旦我们成功了，千万不要看不起亲戚，要尽自己能力帮助比自己差些的亲戚！真正做到“人富人穷不断六亲”。
 
 
-
-
-
-
-
-### 09.武侠爱情悲剧多
-- **悲剧更能刺激人的感情**
-    - 相比团圆的结局，悲剧更能刺激人的感情，引发共鸣，同时留下遗憾，给现实生活一个启示，提醒人们珍惜眼前。所谓悲剧，就是将美好的东西毁灭给人看。因为人生本就无法十全十美，也因为曾经的美好，所以在大喜大悲，曲折离奇中越是让人割舍不下。但文学作品始终来源于对生活的理解感悟，最终它包含了生活的悲剧现实的一面，但越是这些的悲惨结局可能越是会让人觉得真实，越是觉得仿佛本来就应该是走向这样的结局。
-- **鲁迅如何说悲剧**
-    - 鲁迅先生说：“悲剧是把有价值的东西撕碎在你面前！”正因为你目睹了“有价值的东西”的毁灭，所以内心情不自禁的震撼。在文学史上，大凡最优秀的作品几乎无一例外的选择了悲剧结束！
-- **武侠中爱情故事**
-    - 有很多经典的爱情故事，都因为本来男女主在一起便是一件很困难的事情，但是他们用真爱来克服困难，这份爱情便显得更难得和经典，更值得写入文学中歌颂。但当爱高于一切，可能就会无法理性地看待或解决问题，以及本身面对的困难很多很大，所以就容易悲剧收场。可能正是因为有悲剧和死亡的存在，一个人与另一个人之间的爱，才显得格外厚重而有意义。
-- **时代的背景**
-    - 还有一点需要结合时代的背景。古代的婚姻都是家长做主，自己是无法做主的，大家也会知道古代更是几乎不可能有自由恋爱存在的。而大部分经典故事读者细细阅读之后就会发现，男女主人公都是那种自由恋爱的，因此违反了封建道德规则，势必会受到封建制度维护者的打压，这里封建维护者多为家长，所以爱情故事必然会一波三折，不会是一帆风顺的。但是也应该明白，作者也可以写成自由恋爱成功的了，但是为什么不呢？还是放到社会大背景下，古代中国的封建势力强大无比，是不可战胜的，作者以悲剧结尾就是这个意思。
-- **关于更多详细内容**
-    - 可以看我的博客大汇总：https://blog.csdn.net/m0_37700275/article/details/79832978 或者 https://blog.csdn.net/m0_37700275/article/details/82972318
 
 
 
