--- a/Read/ReadShareWiki/04.其他精品/04.自我成长备忘录.md
+++ b/Read/ReadShareWiki/04.其他精品/04.自我成长备忘录.md
@@ -73,7 +73,8 @@
 
 ### 10.关于拜访
 - 别空手去别人家里
-    - 永远别空手吃任何人的饭，永远不要空手去任何人的家里玩。你永远要送点礼物，这样别人就还会感觉到，你这个人还尊重他们。以后你想做点什么事情，别人才会帮忙。平时就要学会烧香，临时才会有佛脚抱。
+    - 永远别空手吃任何人的饭，永远不要空手去任何人的家里玩。你永远要送点礼物，这样别人就还会感觉到，你这个人还尊重他们。
+    - 以后你想做点什么事情，别人才会帮忙。平时就要学会烧香，临时才会有佛脚抱。
 
 
 
