--- a/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
@@ -1,7 +1,11 @@
 #### 目录介绍
 - 01.工作稳定的探讨
 - 02.把不变当做稳定
-
+- 03.如何做决策正确
+- 04.应对提问四步曲
+- 05.四维思考思路清
+- 06.远离低效的会议
+- 07.专注于基础知识
 
 
 ### 01.工作稳定的探讨
@@ -41,6 +45,135 @@
     - 你要知道，很多你无法解决的问题，不是通过辞职就能解决的。让自己具备独立生活的能力，具备一技之长的资本，是需要无数个夜晚的静思，无数寂寞时光的堆积而成的。
     - 只有有能力稳定，才可能让自己的人生状态稳定。否则很容易在未知的明天，失去了方向，变得喜欢抱怨生不逢时。
     - 人要做的，就是找到自己的兴趣，积累自己的专业或者能力，尽量清晰自己未来想要什么，然后抬脚去争取——这个就是稳定。
+
+
+### 03.如何做决策正确
+- 先来说一下背景
+    - 都知道选择大于努力，但是怎么样的选择才是最好的选择呢？当面对选择时，有的人会深思熟虑，有的人会基于某些简单的原因，做出一些心血来潮的决策。那到底怎么做才是最优方法呢？怎么才能保证我们的决策尽量正确呢？
+    - 绝大多数决策，之所以出现问题，很大程度上都在于 4 个原因。统称为“4F”，即框架（Frame）、情绪（Fear）、经验（Familiar）、决策风格（Focus）。
+- 第一， 框架。决策的前提有以下三点：
+    - 确认自己想实现的目标；获得足够而可靠的信息；依据目标和信息确认备选项。这三点共同构成了决策的“框架”。
+    - 大多数决策问题都出在框架上。如果认知和决策框架太过“狭窄”，就会局限我们的目标、信息和备选项。
+    - 如何破解这个困境呢？拓展视野。走出自己熟悉的模式，多去接触其他不同领域、不同行业的人，了解他们是怎么工作、生活的，尝试去理解这个世界的运转方式。这会大大拓展你思考和选择的可能性。
+    - 反思自己的决策框架。试着列出所有的限制条件，然后问自己：这些条件真的成立吗？永远问自己一个问题：我还有其他选择吗？
+    - 不要局限于你所看到的决策框架，那往往是经过别人筛选、判断、传播之后，再呈现给你的。
+- 第二， 情绪。情绪最容易犯的错误，一是贪婪，二是恐惧。
+    - 它们的本质都是源于对“损失”的厌恶。基于此，我们要么会瑟缩在自己的舒适区内，踌躇不前；要么热血上涌，不顾成本、收益和可能性，不撞南墙不回头。
+    - 如何破解情绪对我们的干预呢？可以使用量化 + 双向对比法。举个例子：像“一直得不到升迁，要不要跳槽”的问题
+    - 一个有效的思考方式是：如果继续留下，多久才能升迁？升迁带来的收益能否覆盖成本？如何缩短这段时间成本？如果选择离开，要付出什么成本？可能得到的期望收益是什么？如何降低成本、提高收益？
+- 第三，经验。
+    - 我们作决策都基于两个理由：一种是别人告诉你的信息；一种是自己经历过的、对相似事物的认知、经验和记忆。但很多时候，经验也没那么靠谱。
+    - 原因很简单：其一，经验会使我们放大事物之间的相似性，忽略事物之间的差异，甚至会有意无意地挑选外界的证据，从而得出有利于我们立场的观点；
+    - 其二，经验是过去的、静态的，而时代不断在发展，我们对时间的误判往往会影响结果。更重要的是，你能保证，你的经验一定是正确的吗？
+    - 如何破解呢？用事实和数据驱动决策。尽可能去搜集最新的事实、证据和数据，用它们来作为决策依据。让自己去关注问题与熟悉经验的不同之处。
+- 第四，决策风格。在决策时，不同的人会有两种倾向。
+    - 第一种会更聚焦于目标，痴迷于找出“最优解”，追求用最好的方式去做最正确的事情。这样的人，就称为“评估者”。
+    - 第二种会聚焦于行动，属于“行动者”。他们追求“满意解”，一旦陷入不满意状态，就会立刻采取行动，让自己到达一个更好的状态。
+    - 评估者在作决策时，往往会因为过度关注“最优解”而耗损大量精力，产生压力、焦虑和沮丧感，而这些，都会降低决策质量。
+    - 另外，在大多数时候，“行动者”的表现似乎都更好一些。他们不但作出决策的时间更短，对决策的质量往往也会更满意。
+
+
+### 04.应对提问四步曲
+- 先说一下背景介绍
+    - 在演讲时，大多数人都非常欢迎听众提出问题，因为只有提出问题才代表听众在思考，说明听众对演讲内容感兴趣。
+    - 但是，很多演讲者又害怕听众提问。因为一旦回应不好，他会觉得自己在听众心目中失分或者光辉形象被打折扣。分享了一种完美回应提问的四步法则，或许能帮助你更好地回应听众问题。
+- 第一步：聆听问题
+    - 只有听清楚听众的问题是什么，你才能够有效地做出回应。在听的过程中，除了全神贯注外，你最好能够注视对方，同时点头示意，并且用肯定的语气鼓励对方完整地表述他的问题。
+    - 享誉全球的催眠治疗大师米尔顿·埃里克森曾说，聆听是非常有讲究的，它至少可以划分为三个层次：第一层次是表达者只是听到了自己想听的；第二层次是表达者听到了对方所真正关心的；第三层次是“听”到对方的气息、情绪、动作，感知对方的状态。
+    - 毫无疑问，每个表达者都要努力让自己在聆听的境界上达到第三个层次。
+- 第二步：检验理解
+    - 在听完问题后，先要去检验你有没有准确理解问题。这样做的另一个好处是为自己争取更多的时间去思考你的回答，所以检验理解很重要。
+    - 你可以通过复述的方法，重复一遍他提出的问题，或者帮助他澄清一些概念的方式，以助于你针对问题本身，和提问者达成共识。
+- 第三步：给予肯定
+    - 听众有两方面的需求，即逻辑需求和情感需求。当他提出一个问题时，一方面他会关心你的答案；另一方面他也希望得到来自表达者的认可跟肯定。
+    - 所以在真正回应问题之前，你需要满足他的情感需求，这样做也有助于拉近彼此的距离。
+    - 另外，给予肯定需要成为表达者在回应听众问题时的一个规定动作，而且，需要用不同的方式：可以是一个认同的眼神，也可以是一个大拇指的手势，还可以走上前去轻拍对方的肩膀，等等。
+- 第四步：回应问题
+    - 回应问题有几项原则，一是表达时运用先后、主次的技巧，比如“首先、其次、最后”，这样做的好处是，听众会认为你的回答富有逻辑性。二是尽量控制回应问题的时间，不宜洋洋洒洒、长篇大论，以要点为主。
+    - 另外，如果听众提出的问题其实是演讲中已经讲过的内容，你也不要打击听众，尝试用更委婉的方式来回应。
+- 当遇到自己很难回答甚至完全回答不上来的听众提问时，又该怎么办呢？
+    - 通常这类具有挑战性的问题，分为两类：第一类是围绕着获取信息提出的问题；第二类是围绕着观点探讨提出的问题。
+- 如果听众提出的是围绕事实信息类的问题，你可以有两种回应策略。
+    - 第一种是老实承认自己不知道，暂时没法提供答案。这么回应的好处是显得你很诚恳，当然风险在于听众对你的专业形象会有所质疑，所以要谨慎使用。
+    - 第二种回应策略是拖延战术。这要看场合，当你不能简单地告诉对方你不知道，同时你有可能为自己争取更多时间去找到问题答案，再给予对方回应时，你就可以用拖延战术。
+- 观点信息类问题，当你不知该如何作答时，有两个办法可以防止场面尴尬。
+    - 一是尝试转移战术。尝试在现场找到适合替你回答问题的对象。前提是你了解你的听众或者你的支持者阵线当中，谁有什么样的专长，能帮助你回答什么样的问题。
+    - 二是变焦法。当对方提出了一个范围很大、很笼统的问题时，你可以通过调整问题的范围，聚焦在某一个你能回答的点上给予对方回应。
+
+
+### 05.四维思考思路清
+- 先说一下背景介绍
+    - 在现实生活中，很多人都会有这样的疑惑：我很有想法，也很努力，但怎么总是得不到好的结果呢？这可能与你的思维方式有关。因为如果你的思路不清晰，就会越努力，离目标越远，从而陷入“穷忙”的状态。
+    - 那么如何认清思路，打开思维，清除思维误区的干扰，简单干脆地解决问题呢？
+- 首先来看看人们为什么会陷入思维误区，这通常有四点原因。
+    - 1.纷繁复杂的表象，影响了人们的判断。
+    - 2.对问题的过度思考，扰乱了人们的思维。所以要控制思考时间，并按重要程度依次思考问题。
+    - 3.出于自我辩护，人的思维会变得错乱。也就是说，人们最相信的是自己愿意相信的东西，而非真相。为此，人们不惜无视常识，甚至篡改事实。
+    - 4.想法太多，却没有条理。想法不等于思路，只有形成了思路，想法才能落地，成为现实。
+    - 那么，我们要怎样理清思路、排除干扰呢？以下四个思维方式或许对你有用。
+- 界定问题
+    - 想办法抛开表面的次要问题，弄清楚真正需要解决的问题是什么。这样才能针对它设计解决方案，取得最理想的结果。
+    - 要找到核心问题，我们可以使用“五问法”。就是用五个“为什么”，层层递进，通过表象找到问题的本质，
+- 构建逻辑链，确保结论的质量
+    - 要想理清思路，就要构建一条清晰的逻辑链。要构建逻辑链条，有一个非常好用的工具，那就是金字塔结构。
+    - 这是一种先提出结论，再由上至下将论点和论据分组的思维模式。
+    - 每个大论点由几个论据支撑，每个论据下再进行细分。位于上部的是主要论点，再逐级向下延伸。
+- 大声说出你的想法
+    - 这样做的目的是在脑海中重新整理思路。因为当你为了让说出口的语句保持连贯且符合逻辑，就会在说话时潜意识地重新把所有想法再思考一遍。
+    - 这个过程通常难以觉察，但是当你把想法倾泻一空之后，往往会发现思路突然打开了。这就是潜意识在发挥巨大作用，前提是你要用语言表达出来。
+    - 因为在脑海里默想时，这个功能并不会被激活。
+- 把握“第一性原理”，透过事物的底层逻辑抓取问题本质
+    - 第一性原理，是从物理学的角度看待世界的思维方式，将事物的表象一层层剥开，看到其内在本质，然后再从本质一层层往上走。
+    - 而一般情况下，人们都是通过类比得出推论再来指导生活。在日常生活中，所有问题都有它的底层逻辑，万事万物都有相同之处。
+    - 比如要知道一个人的动机，就可以从利益这个底层逻辑来考量，评价一个人，最好是基于优点来说，而不是缺点，毕竟人无完人。
+    - 总之，清晰的思路是通往成功的关键。我们不但要有好的想法，更重要的是把这些想法梳理成清晰的可执行路径。
+
+
+
+### 06.远离低效的会议
+- 先来说一些背景介绍
+    - 几乎每个企业都有例会制度，少则每周例会，多则有周例会、月例会、季度例会，甚至还有日例会等。
+    - 不幸的是，很多企业尽管已经深陷其中，却不曾发现会议的效果越来越差。那么，到底该如何做，才能让会议变得更开放、有效而富有建设性呢？
+- 看看高效会议有哪些原则
+    - 所有可以通过文件提前分享的信息，都不要带到会议上宣读，而改用简捷有效的文件分享方式发给所有人。
+    - 会议不应该是领导者检查信息和核对信息的场所，这样会浪费所有参会者的时间。领导者应该通过自身的亲力亲为，去了解在执行阶段公司到底发生了什么。
+    - 开会的唯一目的是解决问题，通过群体的智慧发现问题、解决问题，并且形成一个团队，共同承担解决问题的责任，而非相互推诿扯皮。
+- 例会前的一些准备操作
+    - 明确高效原则后，在例会之前，由公司运营团队负责向各个业务部门收集议题，比如遇到的挑战和待解决的问题等，并把收集到的问题提前汇总并发给所有与会者，让他们提前思考和准备。
+    - 通常，在大会议中可能无法涵盖所有部门提出的议题，因此需要选择那些重要和紧急的，值得所有人在一起共同讨论解决的问题。
+    - 在会议进行时，还需要推举一位相对中立的主持人。另外，会议的流程可以经过设计，但核心在于对问题的澄清和提出建设性的解决办法。
+- 经过四个步骤来真正做到高效会议
+    - 第一步，由提出议题者在限定时间内解释问题，以及产生问题的背景因素。然后请议题利益相关者提出一些澄清性的问题，从而对问题背后的背景因素和目前的状况展开更深入的挖掘。
+    - 第二步，在经过若干轮的问答之后，要询问一下问题的提出者，这个问题是否需要重构。因为经过刚才的密集提问和回答，可能这个问题已经发生了改变，需要重新将这个问题换一个角度提出来。
+    - 第三步，需要让所有的提问者、参会者，尤其是这个问题的利益相关者，都提出解决方案或建议。给出的方案要言简意赅，切中要害。
+    - 第四步，让参会者在会议结束时谈谈收获和心得。在这个过程中，往往每个人都会有非常深刻的启发和体会，这是一个组织持续学习的过程，通过解决问题的过程来提升团队凝聚力。
+
+
+
+### 07.专注于基础知识
+- 先说一下背景
+    - 作为一名开发人员，需要不停地学习新技术。那么，我们应该学习什么样的技术？
+    - 开发者需要掌握最新的技术，每天学习编程语言、框架和库，知道的工具越新越好，但这一切都是在浪费时间。
+- 观点介绍
+    - 技术的未来预期寿命与其当前存在时间成正比，每一段额外的生存期都意味着更长的剩余预期寿命。
+    - 技术存在的时间越长，学习它就越安全，对于技术人员来说，不要急于学习新技术，因为它有很高的消亡概率；时间是最好的导师，它会证明哪些技术值得学习，所以需要学会等待。
+- 来看一个案例介绍
+    - 曾经，兹西佐夫的导师给他上了重要一课。他的导师询问他正在做什么，他回答正在阅读一本关于如何用 GWT 构建现代 Java 应用程序的书，GWT 是必须跟进的技术。
+    - 在此之前，他还读了一本 500 页的关于 Apache Tapestry 的书，但他现在根本没用到 Apache Tapestry ，这也没办法帮助他很好地解决 GWT 相关的问题。
+    - 因此，导师建议他正确地设置优先级，把 80% 的时间花在基础学习上，然后剩下 20% 的时间留给框架，库和工具的学习即可。
+- 只有深入研究项目本质，才会发现它们都是相似的：
+    - 编程语言是不同的，但设计是相似的。框架是不同的，但设计模式是可以通用的。开发者是不同的，但与人打交道的规则是统一的。
+    - 开发者应该将宝贵的时间花在可移植的技能上，比如框架进化体系结构，干净的代码，设计模式、安全精简编码原则、容错模式、HTTP 和 REST 等技能上。
+
+
+
+
+
+
+
+
+
+
 
 
 
