--- a/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
+++ b/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
@@ -1,6 +1,7 @@
 #### 目录介绍
 - 02.考虑失败关注细节
 - 03.优雅与老板谈工资
+- 04.张仲平的送礼艺术
 
 
 
@@ -37,5 +38,41 @@
 - 薪水不是一切
     - 不要因为只考虑薪水而扔掉了大部分的谈判权。比如，你在初创公司工作，可以协商工作多少年之后获得多少股份，当初创公司规模扩大之后，你获得的收益会比工资还多。
     - 如果你想和老板协商工资的话，可以参考以上四点：确定自身价值、确定公司价值、不要第一个说出你的期望薪资、薪水并不代表一切。
+
+
+### 04.张仲平的送礼艺术
+- 先说一些背景介绍
+    - 送礼就是人情世故最常见也是最有效的手段，一来二往中结交人脉，达成目的。但是送礼也是一门艺术，送给谁、该送什么、送的方式处处都是学问，一不留神也会适得其反。
+- 故事大概介绍
+    - 《青瓷》中的张仲平是一个高情商的拍卖行老板，尤其擅长人际交往，他弃官从商，对官场对人情世故了然于心，洞察每个人的本性，对送礼艺术堪称是教科书级别。
+    - 无论是油盐不进的廉洁官员，还是吃肉不吐骨头的狠角色，张仲平都能应付自如。
+    - 在张仲平给侯昌平送礼这一段中，既投其所好送的礼物合适，而且也让侯昌平欣然接受，没有拒绝的理由，简直就是送礼的天花板。
+- 先看一个失败的案例
+    - 徐艺给侯昌平送礼的典型失败案例。愣头青徐艺为了搞定侯昌平，直接拿着红包去侯昌平家送礼，侯昌平的妻子看到红包后直接将徐艺拒之门外。
+    - 徐艺还特别不解的问：这不是侯法官家吗？您不是他太太吗？侯昌平的妻子生气的说：你要找的是下半辈子在牢里的侯法官，不是我们家老侯。”说完就给徐艺一个闭门羹。
+    - 徐艺直呼：火星来的吗？送红包都不要。徐艺咋咋呼呼拿着红包在楼道里塞给侯昌平的妻子，也不担心被楼上楼下的人听见，这是明显的没有替收礼的人考虑，就算侯昌平的妻子再贪钱，她也不敢这么明目张胆的收钱。
+    - 首先不认识徐艺，对徐艺更没有信任，送礼被拒也是必然的。但是徐艺并没有放弃，最终他还是找到了侯昌平，开门见山的跟侯昌平说：公司刚成立，想到您这里来走动走动，拜拜码头！
+    - 别说是侯昌平这种正直，特别爱惜自己羽毛的官员，根本看不上徐艺的这一套。就算是贪得无厌之人也要被气到吐血。
+    - 侯昌平没有好气地说：你们做生意的人，不要一碰到事情，就想着拿钱去解决。钱的确可以解决很多问题，但不能解决所有问题。我告诉你，今天这个事在我这里就不行，顺便告诉你，你太小看我了，我的清白和名声远不止这个价。
+    - 徐艺还想再解释，侯昌平怒气冲冲的说：我懒得听你说下去，要么拿钱走，要么就把这钱送到单位纪检组。
+- 张仲平初次拜访侯昌平的艺术送礼
+    - 张仲平为了取得法官侯昌平对公司的支持，首先是怀里端着一箱子酒以老乡的名义去登门拜访。
+    - 一进屋就笑嘻嘻的，引用伟人的话一语双关：“世上无难事，只要肯登攀啊。张仲平进门就把酒放下。
+    - 侯昌平问：这酒是怎么回事？张仲平嘻嘻哈哈，故作风轻云淡，笑着说：这是代理商送的，我这人滴酒不沾，但我听说您好喝这两口，这不我就端来给您尝尝吗！
+    - 这很显然张仲平对提前做了功课，对侯昌平是有一定研究的，知道他喜欢什么，送礼要投其所好。
+    - 侯昌平见状一本正经的要给钱，问张仲平多少钱，要么收钱，要么把酒抬走。张仲平继续嘻嘻哈哈说：这没法给，人家送我的东西，我拿您的钱，我这不成了代理商了吗？再说这钱我真不知道，人家都是内部特供酒都是福利的，没价。
+    - 从这里我们可以看出张仲平对人性的把握太到位，把侯昌平的心里状态拿捏得死死的。既让侯昌平无法拒绝，无法给钱，而且不动声色还抬高了酒的价值，所谓物以稀为贵，从而表明了自己的无上诚意。
+    - 对于这样的说辞，侯昌平也无法再拒绝，只能收下说：你这人，真会说话，不收钱，我欠你人情，人情早晚得还。给钱，我把你当成卖金瓷酒的了，是吧？
+    - 所谓礼下必有求于人，收人钱财替人消灾，侯昌平也是爱惜羽毛之人，心有忌惮的问：你没事情求我吧？
+    - 张仲平赶紧掩盖目的回答：没有没有，真没有，即便以后有，那答不答应呢，也得看您自己，您跟我相处时间还不长，咱们也没打过交道，以后时间一长，你就知道了，我不爱为难朋友，从来不强人所难。
+- 精彩分析
+    - 张仲平知道侯昌平并不是不收礼，而是怕收礼要办事，首先去掉侯昌平的后顾之忧去掉，让侯昌平不得不收初次见面好朋友的好礼。
+    - 这短短的几句话就立马让侯昌平放下心里忌惮，拉近了彼此之间的距离，即使以后有事情需要他帮忙，能帮的就帮，不能帮的也不会强他所难。
+    - 也让侯昌平觉得这是朋友之间的交情，这不是在送礼，是在交朋友。
+
+
+
+
+
 
 
