--- a/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
@@ -1,9 +1,32 @@
 #### 目录介绍
+- 01.赚钱也要赚时间
 
 
 
 
 
+### 01.赚钱也要赚时间
+- 先说一下背景介绍
+    - 在金钱上，我们通常用“赚”来表示一种相对净流入的状态，不过这种状态不仅限于金钱，时间也一样可以赚。比赚钱更重要的，是“赚”时间。
+    - 很多人会认为时间是一个常量，但其实我们已经从爱因斯坦那里知道了时间是一个变量。即便从我们的人生经历来看，时间也依然是一个变量。
+- 举一个案例分析
+    - 如果一个人几十年如一日，无论是自己的经历，还是身边的环境都几乎没有变化，我们就可以将其看作近似活了一日而非几十年。
+    - 因为只有当不同的经历出现时，时间对他而言才产生了新的意义，经历差距越大，他赚到的时间就越多。
+- 提出了 4 点建议
+  - 摆脱浪费时间的困境：寻找高效时段，远离噪声干扰，明确任务目的
+- 寻找高效时段：
+    - 每个人都有自己的高效时段，有的人是清晨，有的人是夜晚，还有的人是中午或者下午，所以千篇一律地号召所有人养成早睡早起的习惯其实并不准确。
+    - 要提升自己在单位时间上的使用效率，就应该先找到自己的高效时段，试着将同一项工作任务放在不同时段去完成，最后对比哪一时段内工作效率更高，就是一个确定自己高效时段的好办法。
+- 远离噪声干扰
+    - 作为一个有好奇心的正常人类，我们很难对“叮咚”声充耳不闻，也很难对闪着小光点的黑屏手机视而不见。
+    - 不过，这些都是正常现象，但这种即时获取的猎奇心理和乐趣很容易就会刺激多巴胺的分泌，并让我们无法停止。
+    - 所以，需要选择尽量安静且不容易被打断的环境进行重要工作。
+- 明确任务目的
+    - 我们必须要记住自己当下的任务目的，自己来这里做什么，以及当下的主要任务是什么。
+    - 多线程处理并没有问题，但必须时刻保持界限，很多人认为这只是有关自控的问题，但其实有没有养成任务目的第一性的习惯才是关键所在。
+- 丰富时间经历
+    - 如果你在流水线上一直重复同样的事情，那么哪怕你将时间的利用效率调整得再高，也不是赚到了时间。
+    - 因为几十年如一日本来就是一日，你不仅没有赚到时间，而且单纯的从时间角度来讲，你还荒废了生命。
 
 
 
